--- a/བོད་གདོད་མའི་ལོ་རྒྱུས་.mw
+++ b/བོད་གདོད་མའི་ལོ་རྒྱུས་.mw
@@ -1,1 +1,6 @@
 ཐོག་མར་རང་རེའི་ཡུལ་འདི་ལ་བོད་ཅེས་འབོད་པའི་མིང་དེ་ཇི་ལྟར་བྱུང་བའམ། དེ འི་གོ་དོན་གང་ཡིན་པའི་སྐོར་ལ། བོད་ཀྱི་ལོ་རྒྱུས་རྒྱལ་རབས་དང་ཆོས་འབྱུང་སོགས་ཀྱི་ནང་མིང་ཚིག་དེའི་འགྲེལ་བཤད་འཁོད་པ་ཞིག་མ་མཐོང་ཞིང་། ཉེ་རབས་ཀྱི་ལོ་རྒྱུས་སྨྲ་བའི་མཁས་དབང་དགེ་འདུན་ཆོས་འཕེལ་གྱིས་མཛད་པའི་དེབ་ཐེར་དཀར་པའི་ནང་ཐ་སྙད་འདི་ལ་ཐོག་མའི་དཔྱད་པ་ཞིག་གནང་མྱོང་བ་ལྟར་ཞིབ་པ་ཡིག་ཆ་ དངོས་ལ་གསལ་དོན་དེའི་ནང་དུ་བསྟན་པར། ས་བཅད་དང་པོ། བོད་ཀྱི་གདོད་མའི་ལོ་རྒྱུས། དང་པོ། བོད་ཅེས་བྱ་བའི་མིང་བྱུང་ཚུལ། ཐོག་ མར་རང་རེའི་ཡུལ་འདི་ལ་བོད་ཅེས་འབོད་པའི་མིང་དེ་ཇི་ལྟར་བྱུང་བའམ། དེ འི་གོ་དོན་གང་ཡིན་པའི་སྐོར་ལ། བོད་ཀྱི་ལོ་རྒྱུས་རྒྱལ་རབས་དང་ཆོས་འབྱུང་སོགས་ཀྱི་ནང་མིང་ཚིག་དེའི་འགྲེལ་ བཤད་འཁོད་པ་ཞིག་མ་མཐོང་ཞིང་། ཉེ་རབས་ཀྱི་ལོ་རྒྱུས་སྨྲ་བའི་མཁས་དབང་དགེ་འདུན་ཆོས་འཕེལ་གྱིས་མཛད་པའི་དེབ་ ཐར་དཀར་པའི་ནང་ཐ་སྙད་འདི་ལ་ཐོག་མའི་དཔྱད་པ་ཞིག་གནང་མྱོང་བ་ལྟར་ཞིབ་པ་ཡིག་ཆ་ དངོས་ལ་གསལ་དོན་དེའི་ནང་དུ་བསྟན་པར། “བོད་ཅེས་བྱ་བའི་ཚིག་དེའི་དོན་གང་ཟེར་ན། རྣམ་པ་གཅིག་ཏུ་ན་དོན་ཅི་ཡང་བཤད་དུ་མེད་པའི་འདོད་རྒྱལ་ཙམ་ཡིན་པའང་སྲིད་” （༡）ཅེས་ གསུངས་ཤིང་། དེའི་མུ་མཐུད་ནམ་ཡང་ན་རྒྱལ་པོའི་མཚན་ཡུལ་ལ་ཐོགས་པའམ། གཡུང་དྲུང་བོན་གྱི་འདོད་ཚུལ་ལྟར་ན། “ཐོག་མར་བོན་གྱི་ཡུལ་ཞེས་གྲགས་པ་ལ་རྗེས་སུ་བོད་ཀྱི་ཡུལ་ཞེས་ཟུར་ཆག་པ་ ཡིན་”ཟེར་བ་སོགས་དཔྱད་གཞིར་འདོན་གནང་འཛད་པ་ལས། ཚིག་ཐག་ད་དུང་བཅད་གནང་མེད་པ་ནི་དོན་གྱི་མཁས་པའི་དགོངས་གཞི་ཡི་རངས་སྐྱེ་འོས་ པ་ཞིག་ཏུ་མངོན། འོན་ཀྱང་ཁོང་གིས་ཐོག་མ་ཁོ་ནར་བོད་ཅེས་པའི་མིང་དེ་རྒྱ་གར་དང་། རྒྱ་ནག ཁ་ཆེ། སོག་པོ། ཐ་ན་དབྱིན་སྐད་སོགས་ཕྱི་རྒྱལ་གཞན་གྱི་འབོད་ཚུལ་ཡིན་ལ་རེ་རེ་བཞིན་སྒྲ་རིག་ པའི་གཏན་ཚིགས་ཀྱི་ཐོག་ནས་དབྱེ་ཞིབ་ཚན་རིག་དང་མཐུན་པ་ཞིག་གནང་སྟེ། མདོར་ན་བོད་ཅེས་པ་ནི་བོད་མིས་རང་གི་ཡུལ་ལ་བཏགས་པ་མིང་དེ་ག་རང་ཡུལ་གཞན་གྱི་ སྐད་ལ་ཕར་ཟུར་ཆག་པ་འབའ་ཞིག་ལས། ཡུལ་གཞན་གྱི་མིས་ཚུར་བཏགས་པ་ཞིག་མ་ཡིན་པ་རིགས་པས་ཁུངས་སྐྱེལ་གནང་བ་དེ་ནི། རང་རེར་གནད་དོན་འདིའི་ཐད་ལ་བསམ་གཞིགས་དང་ཞིབ་འཇུག་བྱ་རྒྱུའི་རྩ་བའི་གཞི་ འཛིན་ས་གསེར་གྱི་ས་གཞི་ལྟ་བུ་ཞིག་ཡིན་ནོ།། རང་ཅག་གི་ཡུལ་འདིའི་མིང་ ལ་བོད་ཅེས་བྱ་བ་དེ་དུས་ནམ་ཞིག་ལ་བྱུང་བའི་ཐད་དེབ་ཐར་དཀར་པོའི་ནང་། “དེ་ཡང་རང་རེའི་ཡུལ་འདི་ལ་ཆེས་སྔ་མོ་ཞིག་ནས། རང་སྐད་དུ་བོད་ཀྱི་ཡུལ་ཞེས་བྱ་བར་གྲགས་” （༢）ཞེས་ གསུངས་པ་བཞིན་བོད་ཅེས་པའི་ཐ་སྙད་དེ་ནི་གདོད་མའི་དུས་ནས་བྱུང་བར་མངོན། དཔེར་ན་བོན་གྱི་ལོ་རྒྱུས་སམ་ཁུ་སྟོན་བརྩོན་འགྲུས་གཡུང་དྲུང་གིས་མཛད་པའི་ལོ་ རྒྱུས་ཆེ་མོ་སོགས་བོད་གནའ་རབས་ཀྱི་ངག་རྒྱུན་འཁོད་པའི་ཡིག་རིགས་དག་ལས། གདོད་མའི་དུས་སུ་ཡུལ་འདིར་གནོད་སྦྱིན་ལ་སོགས་མི་མ་ཡིན་གྱི་དབང་མཛད་བཅུ་ སོགས་བྱུང་བའི་བརྒྱུད་རིམ་བཤད་ཡོད། ང་ཚོས་མི་མ་ཡིན་ཞེས་ཐོས་མ་ཐག་དེ་ནི་དངོས་མེད་ལྷ་སྒྲུང་ཡིན་ཟེར་ནས་རྣ་བ་མི་ བཟེད་པ་གཏན་ནས་བྱ་མི་རུང་། མི་མ་ཡིན་གྱི་དབང་མཛད་བཅུ་བྱུང་ཞེས་པ་ནི་ས་མཐོའི་སྤྲ་མི་རྣམས་ད་དུང་གནའ་མི་ མཚན་ཉིད་པ་ཞིག་ཏུ་མ་གྱུར་པའི་གོང་རོལ་གྱི་དོན་ཞིག་ཡིན་པ་གོ་དགོས། དེ་དག་གི་བརྒྱུད་རིམ་བཤད་པའི་ནང་། “བདུན་པ་མང་སངས་རུས་དགུས་དབང་བྱས་ཏེ། ཡུལ་གྱི་མིང་ནི་བོད་ཀ་ཉ་དྲུག་ཟེར་” （༣）ཞེས་ གསལ་བས་བོད་ཅེས་པའི་ཡུལ་མིང་ནི་ཐོག་མ་དེ་དུས་ནས་ཡོད་པ་མཐོང་ཐུབ། དེ་ནས་ད་ཕན་ལོ་གྲངས་ཇི་ཙམ་སོང་བ་ནི་བརྗོད་ཀྱིས་མི་ལང་བ་སྨོས་ཅི་དགོས། རྒྱུ་མཚན་དེ་དག་ལ་བསམ་དུས་བོད་བྱ་བ་ནི་བོད་རང་གི་མིས་བཏགས་པ་དེ་བས་ཀྱང་ཚད་ མར་གྲུབ་ཅིང་། དེ་ཡང་འདོད་རྒྱལ་གྱི་མིང་ཙམ་ཡིན་ཤས་ཆེ་ལ། གོ་དོན་ལྡན་པའི་དབང་དུ་བཏང་ནའང་དཔྱད་གཞི་གང་མང་བསགས་ནས་བརྟག་དཔྱད་ཞིབ་འཇུག་ མུ་མཐུད་དེ་བྱ་དགོས་པ་ལས། ཕྱོགས་རེ་བའི་སྒོ་ནས་ཁ་ཚོན་གཅོད་མི་འོས་པ་གསལ་པོར་རྟོགས་ཐུབ། འོན་ཀྱང་བོད་ཀྱི་ལོ་རྒྱུས་ཤེས་བྱར་དོ་སྣང་བྱེད་དགོས་ན་བོད་ཅེས་པའི་ཐ་སྙད་ དེ་ཇི་ལྟར་བྱས་ནས་བྱུང་བ་དང་། དེའི་གོ་དོན་གང་ཡིན་ལ་བསམ་ཞིབ་བྱ་རྒྱུ་ནི་གལ་འགངས་ཆེ་བ་ཞིག་ལོས་ཡིན། དེར་མིན་གྱི་དཔྱད་གཞི་གཞན་དག་ཀྱང་བརྩད་འཚོལ་བྱ་རྒྱུ་དེ་དགོས་ངེས་ཤིག་ཏུ་ མཐོང་། བོད་ཅེས་པའི་ཡུལ་མིང་འདིའི་གོ་དོན་སྐོར་ལ་དམངས་ཁྲོད་དུ་མི་ རབས་ནས་མི་རབས་བརྒྱུད་པའི་བཤད་ཚུལ་ཡང་འགའ་ཞིག་ཐོས། དཔེར་ན་ལ་ལས་ཟེར་ན། གནའ་སྔ་མོ་ཡུལ་འདིར་ཞིང་ལས་ཐོན་སྐྱེད་མ་དར་བའི་གོང་ལ་མི་རྣམས་རི་དྭགས་རྔོན་ པ་དང་། དེ་ནས་རིམ་བཞིན་ཕྱུགས་རིགས་གསོ་སྐྱོང་ལ་བརྟེན་ནས་འཚོ་ཐབས་བྱེད། སྐབས་དེར་ཕྱུགས་རིག་རྣམས་འཕེལ་བ་དང་བསྟུན་ནས་རྩྭ་བཟའ་འདང་ངེས་ཤིག་ཡོང་བའི་ དོན་དུ་འབྲོག་པ་ཚོ་རུབ་སྡོད་བྱ་ཐབས་མེད་པར་ཁ་ཐོར་ནས་རི་ཀླུང་རྩྭ་ཆུ་གང་བཟང་ དུ་གནས་ངེས་མེད་ཀྱི་སྐྱ་སྤོ་བྱེད་དགོས་པ་ཆགས། རྒྱང་ཐག་རིང་པོར་ཁ་གྲམ་ནས་སྡོད་པའི་འབྲོག་པ་དེ་རྣམས་ལ་རང་བྱུང་ཁམས་ལས་བྱུང་ བའི་ཆག་སྒོ་དང་། ཇག་རྐུན་ནམ། གཅན་གཟན་གྱི་གནོད་འཚེ་འཕྲད་པ་སོགས་ཕན་ཚུན་འབྲེལ་བ་བྱེད་དགོས་སྟབས། སྐད་རིང་གི་བརྡ་སྦྱོར་ཐུབ་པའི་རྒྱང་ཚད་དུ་གནས་བཅའ་བ་དང་། གནས་ཚུལ་བྱུང་སྐབས་རི་མཐོ་ས་སྒང་ནས་སྐད་ཆེན་པོས་ཀ་ཡེའམ། ཝ་ཡེ་ཞེས་གདངས་རིང་གིས་བརྡ་སྤྲོད་བྱེད་པ་དེ་ལ་“འབོད་པ་”ཞེས་ཟེར། དེ་ལྟར་ཡང་ཡང་བོད་པའི་སྒྲ་སྒྲོག་པས་ཡུལ་དེའི་མིང་ལའང་“བོད་”ཅེས་ཐོགས་པ་ཡིན་ ཟེར་རོ།། དེ་མིན་རྒན་རབས་ཀྱི་བཤད་སྲོལ་གཞན་ཞིག་ནི། རང་ཅག་གི་ཡུལ་འདིའི་རང་བྱུང་གི་ཆགས་བབ་ནི་ནུབ་དང་བྱང་ཕྱོགས་མཐོ་ཞིང་། ཤར་དང་ལྷོ་གཉིས་ཁད་ཀྱིས་དམའ་བ་ཡོད་པ་ལས་གདོད་མའི་དུས་ནས་སྤྱི་ཚོགས་ཀྱི་ཐོན་ སྐྱེད་རིམ་བཞིན་འཕེལ་རྒྱས་འགྲོ་བའི་བྱ་རིམ་ནང་ཕྱི་རོལ་ཡུལ་གྱི་ཆ་རྐྱེན་དང་ བསྟུན་པའི་གཙོ་བོའི་ཐོན་སྐྱེད་ལས་རིགས་གསུམ་དུ་དབྱེ་བ་སྟེ། མཐོ་སར་ཕྱུགས་རིགས་གཉེར་སྐྱོང་ཁོ་ན་བྱེད་པའི་ས་ལ་འབྲོག་ཅེས་དང་། དམའ་སར་ནགས་ལས་གཙོ་གཉེར་བྱེད་པའི་ས་ལ་རོང་ཞེས་གྲགས་ཤིང་། དེ་གཉིས་ཀྱི་བར་དུ་དྲོ་གྲང་སྙོམས་སར་ཞིང་ལས་གཙོ་བོར་གཉེར་བའི་ས་ལ་བོད་ཅེས་ མིང་ཆགས་པ་ཡིན། ལོ་རྒྱུས་ཐོག་སྤུ་རྒྱལ་བཙན་པོའི་གདུང་རབས་དེ་ཡར་ ལུང་དུ་བྱུང་ཞིང་། ས་ཁུལ་དེ་ནི་སྐབས་དེའི་ས་མཐོའི་ཞིང་ལས་གཙོ་བོར་གཉེར་བའི་ལྟེ་བ་ལྟ་བུ་ཡིན་ སྟབས་བོད་ཡུལ་ཞེས་འབོད་པ་དང་། སྤུ་རྒྱལ་བཙན་པོའི་གདུང་རྒྱུད་ལའང་ཡུལ་གྱི་མིང་རྗེ་ལ་ཐོགས་ནས་བོད་ཀྱི་བཙན་ པོ་ཞེས་གྲགས། རྗེས་སུ་བོད་ཀྱི་བཙན་པོའི་གདུང་རབས་ཀྱིས་ཡར་ལུང་གི་མཐའ་འཁོར་དང་། དེ་ནས་རིམ་བཞིན་དབུས་གཙང་དུ་མངའ་འབངས་རྒྱ་བཀྱེད་ཅིང་། ལྷག་པར་བོད་རྗེ་སྲོང་བཙན་སྒམ་པོའི་སྐུ་དུས་ནས་དེ་བས་ཀྱང་ཕྱོགས་བཞི་མཚམས་ བརྒྱད་མངའ་འོག་ཏུ་བསྡུས་ཤིང་། རྒྱལ་ཁམས་ཆེས་ཆེར་བཀྱེད་པ་བཅས་བརྒྱུད་རྗེའི་མཚན་ཡུལ་ལ་ཆགས་ཏེ་བོད་ཀྱི་བཙན་ པོའི་མངའ་ཁོངས་རྣལ་མར་གཏོགས་པ་མཐའ་དག་ལ་བོད་ཅེས་མིང་ཐོགས་པ་ཡིན་ཟེར་རོ། ། སྤྱིར་ ན་མིའི་རིགས་ཀྱི་ལོ་རྒྱུས་དང་ཤེས་རིག་མཐའ་དག་ཐོན་སྐྱེད་འཕེལ་རྒྱས་འགྲོ་བ་ དང་ཁ་འབྲལ་ཐབས་མེད་ལ། ཁྱད་པར་གདོད་མའི་དུས་ནས་བྱུང་ཞིང་ཆགས་པའི་མིང་ཚིག་ནི་དེ་བས་ཀྱང་དེ་ལྟར་ཡིན་ སྲིད་པར་བརྟེན་གོང་དུ་དྲངས་པའི་བཤད་རྒྱུན་དེ་རིགས་ཕྱི་ཡུལ་རང་བྱུང་ཁམས་ཀྱི་ ཆགས་བབ་དང་། གནའ་བོའི་སྤྱི་ཚོགས་ཀྱི་ཐོན་སྐྱེད་བྱ་གཞག་དང་འབྲེལ་བ་ཡོད་སྟབས་འདིར་ཡང་ དཔྱད་གཞིའི་ཁ་སྣོན་ཙམ་དུ་བཀོད་པ་ལགས་ཤིང་། བཤད་སྲོལ་ཕྱི་མ་འདིའི་ཐད་ཐོག་མ་ཞིང་ལས་ས་ཁུལ་ལ་བོད་ཅེས་པའི་ཐ་སྙད་ཐོགས་པ་ ཡིན་ན། བོད་རྗེ་སྲོང་བཙན་སྒམ་པོའི་སྔ་རོལ་དུ་ཡར་ལུང་ཁུལ་དུ་མ་གཏོགས་ཞིང་ལས་དར་ སྲོལ་མེད་དམ་ཞེ་ན། དེ་ནི་ཐོག་མའི་མིང་གི་འབྱུང་ཁུངས་ཙམ་བཤད་པ་ལས་ངེས་པ་མེད་ཅིང་། ད་དུང་ཏུན་ཧོང་གི་ཡིག་རྙིང་ལས་འབྱུང་བ་ལྟར་ན་བཙན་པོ་གནམ་རི་སྲོང་བཙན་གྱི་ ལོ་རྒྱུས་ནང་། “རྒྱལ་པོ་འདིའི་རིང་ལ་། ཁྱུང་པོ་སྤུང་སད་ཀྱིས་རྩང་བོད་ཀྱི་རྗེ་བོ་ མར་མུན་མ གོ་བཆད་ བཅད་དེ། ཁྱུང་པོ་སྤུང་སད་ཀྱིས་རྩང་བོད་ཀྱི་རྗེ་བོ་མར་མུན་མགོ་བཆད་བཅད་དེ། རྩང་བོད་ཁྱིམ་ཉི་གྲི་ཉིས་ཁྲི་བཙན་པོའི་ཕྱག་ཏུ་པུལ་ཕུལ་ཏེ། ཟུ་ཙེམགློ་བ་ཉེ་བ་འི་བྱ་དགར་སྩལ་ཏོ” （༤） ཞེས་གསལ་བ་ལྟར་དུས་དེ་ཤེད་དུ་གཙང་ཁུལ་ཡར་ལུང་གཙང་པོའི་ལྷོ་བྱང་བརྒྱུད་ཀྱི་ ས་གནས་དེ་དག་བཙན་པོའི་མངའ་འོག་ཏུ་མ་ཚུད་གོང་ནས་ཞིང་ལས་གཙོ་བོར་གཉེར་ཁུལ་ ཡིན་སྲིད་ཅིང་། དེར་བརྟེན་རྩང་བོད་ཅེས་བོད་ཀྱི་ཐ་སྙད་ཀྱང་ཐོགས་ཟིན་པ་ མཚོན་པས་དེས་ན་བོད་ཅེས་པ་ཞིང་ལས་ས་ཁུལ་ལ་ཐོགས་པ་ཡིན་ཟེར་བར་སྒྲུབ་བྱེད་དུ་ འགྱུར་བ་མ་གཏོཊ་གནོད་པ་མེད་དོ། གཞན་ཡང་སྔར་གྱི་བླ་མའི་རྣམ་ཐར་སོགས་ལོ་རྒྱུས་ཀྱི་་ཡིག་རིཊ་དང་དེ་སྔའི་བོད་ ས་གནས་སྲིད་གཞུང་གི་ཡིག་ཆ་མང་པོའི་ནང་། “བོད་འབྲོག་མི་སེར་”དང་“བོས་འབྲོག་བརྗེ་ཚོང་”“རོང་བོད་ས་མཚམས་”དང་“རོང་བོད་ སྐྱེལ་མཚམས་”ཞེས་པ་སོགས་མཐོང་རྒྱུ་ཡོད་པ་མ་ཟད། དམངས་ཁྲོད་དུའང་བོད་འབྲོག་ཟེར་བ་དང་རོང་བོད་ཅེས་པའི་ཤོད་སྲེལ་ད་ལྟའང་མཆིས་ པ་དེ་དག་གི་བོད་ཟེར་བའི་གོ་དོན་ཡང་ཞིང་ལས་ཐོན་སྐྱེད་གཙོ་བོར་གཉེར་བའི་ས་ཆ་ ལ་ངོས་འཛིན་བྱེད་ཚུལ་མཚོན་པ་བཅས་འབོད་སྲོལ་འདི་རྣམས་ཀྱང་གནའ་བོའི་ཤུལ་ རྒྱུན་དང་འབྲེལ་བ་ངེས་ཅན་ཞིག་ཡོད་སྙམ་པ་དཔྱད་གཞིའི་ཚུལ་དུ་འཕྲོས་པ་ལགས། ཡང་ཁམས་བོས་ཅེས་པའི་གོ་དོན་གང་ཡིན་སྙམ་ན་ཁམས་ནི་མཐའ་ཁུལ་ལ་ཟེར་ཏེ་དཔེར་ན་ མཐའི་རྒྱལ་ཕྲན་ལ་ཁམས་ཀྱི་རྒྱལ་ཕྲན་ཞེས་གྲགས་པ་ལྟར་བོད་དབུས་ན་མཐའི་རྒྱལ་ ཕྲན་ལ་ཁམས་ཀྱི་རྒྱལ་ཕྲན་ཞེས་གྲགས་པ་ལྟར་བོད་དབུས་ནས་རྩིས་ན་ཤར་ཕྱོགས་ཀྱི་ མཐའ་ཁུལ་ལ་ཁམས་ཞེས་མིང་ཆགས་པས་ཁམས་བོད་ནི་མཐའ་དབུས་ཀྱི་དོན་ཡིན་པ་བཅས་བོད་ ཅེས་བའི་མིང་བྱུང་ཚུལ་གྱི་དཔྱད་གཞི་མདོ་ཙམ་བརྗོད་པའོ།།
+== ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
+* [http://wapexclusive.com.ng/]
+
+[[Category:རྒྱ་གར]]
+[[Category:གྲོང་􀮣]]
