--- a/འབྲུག་རྒྱལ་རྫོང་།.mw
+++ b/འབྲུག་རྒྱལ་རྫོང་།.mw
@@ -15,7 +15,11 @@
 
 
 
+== ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
+* [http://wapexclusive.com.ng/]
 
+[[Category:རྒྱ་གར]]
+[[Category:གྲོང་􀮣]]
 
 
 [[Category:སྤ་རོ་རྫོང་ཁག]]
