--- a/ལྟ་རྫོང་།_(སྤ་རོ).mw
+++ b/ལྟ་རྫོང་།_(སྤ་རོ).mw
@@ -13,7 +13,11 @@
 
 
 
+== ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
+* [http://wapexclusive.com.ng/]
 
+[[Category:རྒྱ་གར]]
+[[Category:གྲོང་􀮣]]
 
 
 [[Category:སྤ་རོ་རྫོང་ཁག]]
