--- a/མགར་ས་_བཀྲིས་མཐོང་སྨོན་རྫོང་།.mw
+++ b/མགར་ས་_བཀྲིས་མཐོང་སྨོན་རྫོང་།.mw
@@ -14,5 +14,12 @@
 
 {{stub}}
 
+== ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
+* [http://wapexclusive.com.ng/]
+
+[[Category:རྒྱ་གར]]
+[[Category:གྲོང་􀮣]]
+
+
 [[Category:མགར་ས་རྫོང་ཁག]]
 [[Category:རྫོང]]
