--- a/ཞོང་སྒར་རྫོང་།.mw
+++ b/ཞོང་སྒར་རྫོང་།.mw
@@ -6,7 +6,11 @@
 
 
 
+== ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
+* [http://wapexclusive.com.ng/]
 
+[[Category:རྒྱ་གར]]
+[[Category:གྲོང་􀮣]]
 
 
 [[Category:མོང་སྒར་རྫོང་ཁག]]
