--- a/སེམས་རྟོགས་ཁ་རྫོང་།_(གསང་སྔགས་ཟབ་དོན་_ཕོ་བྲང་།).mw
+++ b/སེམས་རྟོགས་ཁ་རྫོང་།_(གསང་སྔགས་ཟབ་དོན་_ཕོ་བྲང་།).mw
@@ -12,7 +12,11 @@
 
 
 
+== ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
+* [http://wapexclusive.com.ng/]
 
+[[Category:རྒྱ་གར]]
+[[Category:གྲོང་􀮣]]
 
 [[Category:ཐིམ་ཕུ་རྫོང་ཁག]]
 [[Category:རྫོང]]
