*Empty MediaWiki Message*

--- a/རྡོ་སྦིས་གསེར་མོ་གཞོངས.mw
+++ b/རྡོ་སྦིས་གསེར་མོ་གཞོངས.mw
@@ -7,3 +7,7 @@
 རི་དྭགས་གནའ་བ།  དགོ་བ། ཤྭ་བ། གླ་བ། གཅན་ཟན་སྤྱང་ཀི  ཝ། གཡི། ཕྱུགས་སྲོག་འབྲི་གཡག  མཛོ་མཛོ་མོ། བ་བ་མོ། རྟ་དྲེལ་བོང་གསུམ་ཤིན་ཏུ་ཉུང་།  རོང་འབྲོག་འདྲེས་མར་གནས། ཤར་གྱི་འདམ་རིའི་མགོ་དང་ལུང་སྟོད་མཚམས་དག་རི་མ་དང་།  ནུབ་ཀྱི་རི་འདབས་དམའ་ས་དང་།  གཞུང་ཆུའི་གཡས་གཡོན་རྣམས་ཆུ་མ།  འབྲུ་རིགས། གྲོ ནས། སྲན་གསུམ། སྲད་མ། ཤིང་ཏོག་གི་རིགས་ཉུང་།  མཁར་ཤུལ་རྙིང་བ་བཞི་ཙམ་ཡོད་ཀྱང་ལོ་རྒྱུས་ཤེས་མཁན་ཉུང་། 
 
 ཆོས་རྒྱལ་མྱ་ངན་མེད་ཀྱི་སྐབས་དགྲ་བཅོམ་ལྔ་བརྒྱས་བཞེངས་པའི་མཆོད་རྟེན་ནི་ལུང་བའི་སྨད་སྟོད་དུ་གནས།  ་ནང་སོའི་རྒྱུད་པ་ཡོད་ཀྱང་ངོ་ཤེས་མཁན་ཉུང་། མི་རྣམས་ནི་རྟབ་བེ་རྟོབ་བེ།  ཚབ་བི་ཚུབ་བི།  ཡུལ་སྐད་ལ་བརྡ་རྙིང་མང་བས་རིན་ཐང་ཆེ། ཆོས་ལུགས་ནི་བོན་༼གདོད་བོན༽དང་དམ་ཆོས་འདྲེས་མར་བྱེད། ཧ་ལམ་སྡེ་རེ་ལ་དགོན་རེ་ཡོད།  དེ་དག་ལ་སྒོམ་གྲྭ་དང་སྒར་དུ་འབོད།  བླ་མ་ཚད་དང་ལྡན་པ་ཧ་ཅང་དཀོན།  གྲྭ་བ་རྣམས་གྲོང་ཆོག་བདའ་ཤེས་པ་ཙམ་གྱིས་འཐུས། སྒམ་པ་ལ་མཐོང་མེད། ཕྱུག་པོ་ལ་དབང་ཐང་ཆེ། འགྲན་སེམས་ཆེ། གདོང་ན་འཛུམ་མེད། ཕ་ཡུལ་དུ་འདུག་མཁན་ནི་འདྲ་མེད་དུ་རྩི།  ཤེས་ཡོན་པ་རྣམས་འཆི་ཁར་མ་གཏོགས་ཕ་ཡུལ་དུ་མི་ལོག  ཆོས་གོ་མཁན་ཉུང་ལ་རྨོངས་དད་ཆེ།  བྱིས་པའི་རྒྱུགས་ལྷ་ལ་བཅོལ།  ཤ་མེད་པར་སྐུ་རིམ་མི་བྱ། སྨྱུང་གནས་ནི་ཡོང་སྒོ་བཟང་བོ་རྩི། མ་བྱིན་ལེན་ལ་སྐྱོན་དུ་མི་རྩི།   དུ་འཐེན་དང་ཆང་འཐུང་མང་། རྡོ་རྩིག་བཟོ་ལས་སྐད་གྲགས་ཆེ།  སྙིང་ཆུང་། ཡུལ་དུ་ཕྱིའི་དགྲ་བྱུང་ནའང་མ་གོ་ཁུལ་བྱེད། རྐང་ཐང་དུ་འགྲོ་ན་ངོ་ཚ་རྩི།  ཕྱི་ཡོང་མགྲོན་པོ་ལ་ཡོལ་ནས་འགྲོ བུད་མེད་ལོ་ཆུང་གི་གདོང་མི་སྟོན།   འགྱིག་ལྭ་གྱོན།  གཡུ་རྫུན་དང་བྱུ་རྫུན་རྒྱན་དུ་འདོགས།   མནའ་མ་རིན་གྱིས་ཉོ། གཞན་སྐྱོན་གསང་ཁུལ་གྱིས་གླེང་། ས་བོན་དང་མཉམ་དུ་ཞིང་ལ་དུག་འདེབས།  བོད་ཟས་ལས་དེང་རབ་ཀྱི་ཟས་ཡག་པར་རྩི།   སྐྱེས་ཆེན་དམ་པ་འགའ་རེ་འཁྲུངས་མྱོང་། ༼མུ་འགོད༽
+*[https://wapexclusive.com.ng/emo-grae-suddenly/]
+
+[[Category:རྒྱ་གར]]
+[[Category:གྲོང་􀮣]]
