--- a/མེ་མཁའ་རྒྱ་མཚོ.mw
+++ b/མེ་མཁའ་རྒྱ་མཚོ.mw
@@ -1,1 +1,7 @@
-“མེ་མཁའ་རྒྱ་མཚོ”ཞེས་པ་ནི་གྲངས་ཀ་ངེས་ཅན་ཞིག་མཚོན་བྱེད་ཀྱི་མིང་བརྡ་ཞིག་རེད། གྲངས་ཀྱི་མངོན་བརྗོད་ལྟར་ན་མེ་ནི་གསུམ་དང་མཁའ་ནི་སྟོང་བ་སྟེ་ཐིག་དང་རྒྱ་མཚོ་ནི་བཞི་ཡི་མིང་གི་རྣམ་གྲངས་སུ་བཤད་པས་མེ་མཁའ་བསྡོམས་པས་གྲངས་༤༠༣འཐོབ་པ་ཡིན། འོ་ན་རིམ་པ་ལྟར་བཀླགས་ན༣༠༤མ་ཡིན་ནམ་ཞེ་ན། བདེན་མོད། གྲངས་ཀྱི་མངོན་བརྗོད་ནི་བཟློག་སྟེ་ཀློག་དགོས་པས་༣༠༤ལ་ངོས་འཛོན་མི་རུང་ངོ། ། “འབྲི་བགྲང་སྣོན་པ་རང་གི་གཡས། སྒྱུར་བགོད་འཕྲི་བ་གཡོན་ལ་བརྩམ”ཞེས་རྩིས་ཀྱི་རྩ་ཚིག་ན་གསུངས་པ་ལྟར་རོ། ། ཤམྦྷ་ལའི་རིགས་ལྡན་རྒྱལ་བོ་བཅུ་བ་དང་བཅུ་གཅིག་པས་སྲིད་བསྐྱངས་པའི་ཡུན་ནི་བསྡོམས་ན་བཞི་བརྒྱ་དང་གསུམ་ཟིན་པས་ཕྱིས་སུ་རིགས་ལྡན་རྒྱལ་བོ་དེ་གཉིས་ཀྱི་ཁྲི་ལོ་བསྡོམས་གྲངས་མཚོན་བྱེད་ཀྱི་ཐ་སྙད་དུ་གྱུར་ཏོ། ། དེས་ས་ཤམྦྷ་ལའི་རིགས་ལྡན་བརྩི་ཚུལ་ནི་གང་གི་ལུགས་ཞེ་ན། དཔལ་དུས་ཀྱི་འཁོར་ལོའི་ལུགས་སོ། ནམ་བྱུང་ཞེ་ན། སྟོན་པ་ཤཱཀྱ་ཐུབ་པས་དགུང་ལོ་གྱ་གཅིག་(འདི་ལོར་མྱ་ངན་ལས་འདས)སྟེང་ཤམྦྷ་ལའི་རྒྱལ་བོ་ཟླ་བ་བཟང་པོ་སོགས་ལ་དུས་འཁོར་རྩ་རྒྱུད་གསུངས་པ་ནས་མགོ་ཚུགས་པ་ཡིན་ནོ། །དེང་གི་མཁས་པའི་དབང་བོ་འཇིགས་མེད་རིགས་པའི་བློ་གྲོས་ཀྱི<<བོད་གངས་ཅན་གྱི་སྒྲ་རིག་པའི་བསྟན་བཅོས>>ནང་དུ“བདག་ཅག་གི་སྟོན་པ་ཤཱཀྱ་ཐུབ་པས་དགུང་ལོ་གྱ་གཅིག་པ་དཔའ་བོ་ལྕགས་འབྲུག་གི་ནག་ཟླའི་ཉ་ལ་དུས་འཁོར་གྱི་རྒྱུད་གསུངས་པ་ཤམྦྷ ་ལའི་རྒྱལ་བོ་ཟླ་བཟང་གིས་ཉན་ཏེ་ལོ་བཞིར་རྒྱལ་སྲིད་བསྐྱངས”ཞེས་གསུངས་པ་དེ་ནི། བསྡུས་རྒྱུད་ལས“ལོ་འདི་ནས་ནི་དྲུག་བརྒྱའི་ལོ་ཡིས་གསལ་བར་མི་བདག་གྲགས་པ་ཤམྦྷ་ལ་ཞེས་བྱ་བ་འབྱུང”ཞེས་གསུངས་པ་དང་ཕལ་ཆེར་མཐུན་ནོ། ། ཁོང་གི་བཞེད་ལུགས་ལྟར་སྟོན་པའི་འདས་ལོ་ནི་སྤྱི་ལོ་མ་ཚུགས་སྔོན་གྱི་བརྒྱད་བརྒྱ་གྱ་གཅིག་ལོ་ལ་ངེས། འོན་ཀྱང་ཀུན་མཁྱེན་འཇམ་དབྱངས་བཞད་པའི་བསྟན་རྩིས་དང་སུམ་པ་ཡེ་ཤེས་དཔལ་འབྱོར་གྱི་ཆོས་འབྱུང་དཔག་བསམ་ལྗོན་པར་གསལ་བ་ལྟར་ན། སྟོན་པས་དུས་འཁོར་རྩ་རྒྱུད་གསུངས་པའི་ལོ་ནི་མངོན་པར་སངས་རྒྱས་པའི་ཕྱི་ལོ་སྟེ་དགུང་ལོ་སོ་དྲུག་སྟེང་ཡིན་གྱི་མཐར་ཞི་བར་གཤེགས་པའི་ལོ་མ་ཡིན་ནོ་ཟེར་ཡང་། དེ་ལྟར་ན་བསྡུས་རྒྱུད་ཀྱི་ལུང་དང་འགལ་བས་སྔ་མ་གཙིགས་ཆེའོ་སྙམ། སྤྱིར་དཔལ་དུས་འཁོར་ལོའི་ལུགས་ལྟར་ན་སྟོན་པས་དུས་འཁོར་རྩ་རྒྱུད་གསུངས(སྤྱི་ལོ་སྔོན་གྱི་༨༨༢)ནས་ལོ་གཉིས་པར་ཤམྦྷ་ལའི་རྒྱལ་བོ་ཟླ་བཟང་གིས་རྒྱུད་སྟོང་ཕྲག་བཅུ་གཉིས་པའི་འགྲེལ་བ་སྟོང་ཕྲག་དྲུག་ཅུ་བ་མཛད། ཟླ་བཟང་གི་རྗེས་སུ་རྒྱལ་བོ་དྲུག་གིས་ལོ་བརྒྱ་བརྒྱ་ལ་ཆོས་བསྟན། དེ་དག་ནི་རིམ་པར་བརྗོད་ན། རྒྱལ་བོ་ལྷ་དབང་། གཟི་བརྗིད་ཅན། ཟླ་བས་བྱིན། ལྷའི་དབང་ཕྱུག སྣ་ཚོགས་གཟུགས། ལྷའི་དབང་ལྡན་ཏེ་དྲུག་པོ་ལོ་དྲུག་བརྒྱར་བཞུགས། ཟླ་བཟང་སོགས་བདུན་པོ་ལ་ཆོས་རྒྱལ་བདུན་ཞེས་གྲགས་སོ། ། དེ་རྗེས་རིགས་ལྡན་ཐོག་མ་འཇམ་དཔལ་གྲགས་པ་ནི་སྟོན་པས་རྩ་རྒྱུད་གསུངས་པའི་ལོ་དེ་ནས་ནི་དྲུག་བརྒྱ་དང་བཞི་སོང་བའི་ལོར་ཤམྦྷ་ལའི་ཁྲིར་བཞུགས། བསྡུས་རྒྱུད་མཛད་ཅིང་དུས་ཀྱི་འཁོར་ལོའི་དབང་བསྐུར་བས་དྲང་སྲོང་ཉི་མ་ཤིང་རྟ་སོགས་ཐམས་ཅད་རྡོ་རྗེ་རིགས་གཅིག་ལ་མཛད་པས་འདི་ཕྱིན་ལ་རིགས་ལྡན་ཞེས་གྲགས་སོ། ། རིགས་ལྡན་འཇམ་དཔལ་གྲགས་པ་ནས་གཉིས་པ་པདྨ་དཀར་པོ། གསུམ་པ་བཟང་པོ(བཟང་པོའི་ཁྲི་ལོ་དོན་བརྒྱད་པ་ལ་སྤྱི་ལོའི་མགོ་ཚུགས)། བཞི་བ་རྣམ་རྒྱལ། ལྔ་བ་བཤེས་གཉེན་བཟང་པོ། དྲུག་པ་རིན་ཆེན་ཕྱག བདུན་པ་ཁྱབ་འཇུག་སྦས་པ། བརྒྱད་པ་ཉི་མ་གྲགས། དགུ་བ་ཤིན་ཏུ་བཟང་པོ་སོགས་ནི་རེ་རེས་སྲིད་ལོ་བརྒྱ་བརྒྱ་བསྐྱངས་པས་ལོ་དགུ་བརྒྱ། དེ་ནས་རིགས་ལྡན་བཅུ་བ་རྒྱ་མཚོ་རྣམ་རྒྱལ་གྱིས་ལོ་བརྒྱ་དང་གྱ་གཉིས་ལ་ཆོས་བསྟན་པ་དང་། བཅུ་གཅིག་པ་རྒྱལ་དཀས་ལོ་ཉིས་བརྒྱ་དང་ཉེར་གཅིག་བསྟན་པས། རིགས་ལྡན་དེ་གཉིས་ཀྱིས་ཆོས་བསྟན་པའི་ཡུན་ཚད་བསྡོམས་པས་བཞི་བརྒྱ་དང་གསུམ་བྱུང་བ་ནི་མེ་མཁའ་རྒྱ་མཚོའི་ལོར་བཞག་པ་དེ་ཡིན་ནོ། དེ་ནས་བཅུ་གཉིས་པ་ཉི་མ་(མེ་མཁའ་རྒྱ་མཚོ་རྫོགས་པའི་ཕྱི་ལོ་སྟེ་རིགས་ལྡན་ཉི་མའི་ཁྲི་ལོ་དང་པོ་དང་སྤྱི་ལོ་༡༠༢༧ནས་རབ་བྱུང་དང་པོའི་མགོ་ཚུགས)། བཅུ་གསུམ་པ་སྣ་ཚོགས་གཟུགས། བཅུ་བཞི་བ་ཟླ་འོད། བཅོ་ལྔ་བ་མཐའ་ཡས། བཅུ་དྲུག་པ་ས་སྐྱོང་། བཅུ་བདུན་པ་དཔལ་སྐྱོང་། བཅོ་བརྒྱད་པ་སེང་གེ། བཅུ་དགུ་བ་རྣམ་གནོན། ཉི་ཤུ་བ་སྟོབས་པོ་ཆེ། ཉེར་གཅིག་པ་མ་འགགས་པ། ཉེར་གཉིས་པ་མི་ཡི་སེང་གེ། ཉེར་གསུམ་པ་དབང་ཕྱུག་ཆེན་པོ། ཉེར་བཞི་བ་མཐའ་ཡས་རྣམ་རྒྱལ་ཏེ། དེ་དག་ཀྱང་སྲིད་སྐྱོང་བའི་ཡུན་ཚད་བརྒྱ་རེ་བརྒྱ་རེ་ཡིན་ནོ། དེ་ནས་ཉེར་ལྔ་བ་དྲག་པོ་འཁོར་ལོ་ཅན་ཏེ། འཇམ་དཔལ་གྲགས་པ་ནས་འདིའི་བར་ཤམྦྷ་ལའི་རིགས་ལྡན་ཉེར་ལྔར་གྲགས་སོ། གཞན་ཡང་རྒྱལ་བོ་ཟླ་བཟང་ནས་དྲག་པོ་འཁོར་ལོ་ཅན་བར་ལ་ཆོས་རྒྱལ་སོ་གཉིས་སུ་བགྲང་བའི་སྲོལ་ཡང་ཡོད་དོ། དྲག་པོ་འཁོར་ལོ་ཅན་ནི་ལོ་ལྔ་བཅུ་ཙམ་བཞེས་པ་ན་བྱང་ཕྱོགས་དག་སྦྱིན་བྱ་བར་ཀླ་ཀློའི་རྒྱལ་བོ་རྒྱལ་ཕྲན་གོ་དྲུག་དང་བཅས་བྱུང་ནས་ཤམྦྷ་ལར་དམད་འདྲེན་པར་རྩོམ་པ་དེ་དྲག་པོས་བཅོམ་སྟེ་དུས་བཞི(རྫོགས་ལྡན་གསུམ་ལྡན་གཉིས་ལྡན་རྩོད་ལྡན)ཕྱི་མའི་རྫོགས་ལྡན་གྱི་མགོ་ཚུགས་ཞེས་སྔོན་བྱོན་མཁས་པ་རྣམས་ཀྱི་བཞེད་ཚུལ་མཐུན་ནོ། ། ད་ལྟ་རང་རེའི་བོད་ཀྱི་མཁས་པ་ཚོས་གཙིགས་སུ་འཛིན་པའི་ཕུག་ལུགས་ལྟར་ན་སྤྱི་ལོ་༡༩༨༠སྟེ་རབ་བྱུང་བཅུ་དྲུག་པའི་བགྲང་བྱ་ང་བཞི་བ་ལྕགས་ཕོ་སྤྲེལ་ནི་སྟོན་པའི་འདས་ལོ་༢༨༦༡དང་དུས་འཁོར་གྱི་ལུགས་ལྟར་ན་རིགས་ལྡན་ཉེར་གཅིག་པ་མ་འགགས་པའི་ཁྲི་ལོ་ང་བཞི་ལ་ཁེལ་ཏོ། །
+“མེ་མཁའ་རྒྱ་མཚོ”ཞེས་པ་ནི་གྲངས་ཀ་ངེས་ཅན་ཞིག་མཚོན་བྱེད་ཀྱི་མིང་བརྡ་ཞིག་རེད། གྲངས་ཀྱི་མངོན་བརྗོད་ལྟར་ན་མེ་ནི་གསུམ་དང་མཁའ་ནི་སྟོང་བ་སྟེ་ཐིག་དང་རྒྱ་མཚོ་ནི་བཞི་ཡི་མིང་གི་རྣམ་གྲངས་སུ་བཤད་པས་མེ་མཁའ་བསྡོམས་པས་གྲངས་༤༠༣འཐོབ་པ་ཡིན། འོ་ན་རིམ་པ་ལྟར་བཀླགས་ན༣༠༤མ་ཡིན་ནམ་ཞེ་ན། བདེན་མོད། གྲངས་ཀྱི་མངོན་བརྗོད་ནི་བཟློག་སྟེ་ཀློག་དགོས་པས་༣༠༤ལ་ངོས་འཛོན་མི་རུང་ངོ། ། “འབྲི་བགྲང་སྣོན་པ་རང་གི་གཡས། སྒྱུར་བགོད་འཕྲི་བ་གཡོན་ལ་བརྩམ”ཞེས་རྩིས་ཀྱི་རྩ་ཚིག་ན་གསུངས་པ་ལྟར་རོ། ། ཤམྦྷ་ལའི་རིགས་ལྡན་རྒྱལ་བོ་བཅུ་བ་དང་བཅུ་གཅིག་པས་སྲིད་བསྐྱངས་པའི་ཡུན་ནི་བསྡོམས་ན་བཞི་བརྒྱ་དང་གསུམ་ཟིན་པས་ཕྱིས་སུ་རིགས་ལྡན་རྒྱལ་བོ་དེ་གཉིས་ཀྱི་ཁྲི་ལོ་བསྡོམས་གྲངས་མཚོན་བྱེད་ཀྱི་ཐ་སྙད་དུ་གྱུར་ཏོ། ། དེས་ས་ཤམྦྷ་ལའི་རིགས་ལྡན་བརྩི་ཚུལ་ནི་གང་གི་ལུགས་ཞེ་ན། དཔལ་དུས་ཀྱི་འཁོར་ལོའི་ལུགས་སོ། ནམ་བྱུང་ཞེ་ན། སྟོན་པ་ཤཱཀྱ་ཐུབ་པས་དགུང་ལོ་གྱ་གཅིག་(འདི་ལོར་མྱ་ངན་ལས་འདས)སྟེང་ཤམྦྷ་ལའི་རྒྱལ་བོ་ཟླ་བ་བཟང་པོ་སོགས་ལ་དུས་འཁོར་རྩ་རྒྱུད་གསུངས་པ་ནས་མགོ་ཚུགས་པ་ཡིན་ནོ། །དེང་གི་མཁས་པའི་དབང་བོ་འཇིགས་མེད་རིགས་པའི་བློ་གྲོས་ཀྱི<<བོད་གངས་ཅན་གྱི་སྒྲ་རིག་པའི་བསྟན་བཅོས>>ནང་དུ“བདག་ཅག་གི་སྟོན་པ་ཤཱཀྱ་ཐུབ་པས་དགུང་ལོ་གྱ་གཅིག་པ་དཔའ་བོ་ལྕགས་འབྲུག་གི་ནག་ཟླའི་ཉ་ལ་དུས་འཁོར་གྱི་རྒྱུད་གསུངས་པ་ཤམྦྷ ་ལའི་རྒྱལ་བོ་ཟླ་བཟང་གིས་ཉན་ཏེ་ལོ་བཞིར་རྒྱལ་སྲིད་བསྐྱངས”ཞེས་གསུངས་པ་དེ་ནི། བསྡུས་རྒྱུད་ལས“ལོ་འདི་ནས་ནི་དྲུག་བརྒྱའི་ལོ་ཡིས་གསལ་བར་མི་བདག་གྲགས་པ་ཤམྦྷ་ལ་ཞེས་བྱ་བ་འབྱུང”ཞེས་གསུངས་པ་དང་ཕལ་ཆེར་མཐུན་ནོ། ། ཁོང་གི་བཞེད་ལུགས་ལྟར་སྟོན་པའི་འདས་ལོ་ནི་སྤྱི་ལོ་མ་ཚུགས་སྔོན་གྱི་བརྒྱད་བརྒྱ་གྱ་གཅིག་ལོ་ལ་ངེས། འོན་ཀྱང་ཀུན་མཁྱེན་འཇམ་དབྱངས་བཞད་པའི་བསྟན་རྩིས་དང་སུམ་པ་ཡེ་ཤེས་དཔལ་འབྱོར་གྱི་ཆོས་འབྱུང་དཔག་བསམ་ལྗོན་པར་གསལ་བ་ལྟར་ན། སྟོན་པས་དུས་འཁོར་རྩ་རྒྱུད་གསུངས་པའི་ལོ་ནི་མངོན་པར་སངས་རྒྱས་པའི་ཕྱི་ལོ་སྟེ་དགུང་ལོ་སོ་དྲུག་སྟེང་ཡིན་གྱི་མཐར་ཞི་བར་གཤེགས་པའི་ལོ་མ་ཡིན་ནོ་ཟེར་ཡང་། དེ་ལྟར་ན་བསྡུས་རྒྱུད་ཀྱི་ལུང་དང་འགལ་བས་སྔ་མ་གཙིགས་ཆེའོ་སྙམ། སྤྱིར་དཔལ་དུས་འཁོར་ལོའི་ལུགས་ལྟར་ན་སྟོན་པས་དུས་འཁོར་རྩ་རྒྱུད་གསུངས(སྤྱི་ལོ་སྔོན་གྱི་༨༨༢)ནས་ལོ་གཉིས་པར་ཤམྦྷ་ལའི་རྒྱལ་བོ་ཟླ་བཟང་གིས་རྒྱུད་སྟོང་ཕྲག་བཅུ་གཉིས་པའི་འགྲེལ་བ་སྟོང་ཕྲག་དྲུག་ཅུ་བ་མཛད། ཟླ་བཟང་གི་རྗེས་སུ་རྒྱལ་བོ་དྲུག་གིས་ལོ་བརྒྱ་བརྒྱ་ལ་ཆོས་བསྟན། དེ་དག་ནི་རིམ་པར་བརྗོད་ན། རྒྱལ་བོ་ལྷ་དབང་། གཟི་བརྗིད་ཅན། ཟླ་བས་བྱིན། ལྷའི་དབང་ཕྱུག སྣ་ཚོགས་གཟུགས། ལྷའི་དབང་ལྡན་ཏེ་དྲུག་པོ་ལོ་དྲུག་བརྒྱར་བཞུགས། ཟླ་བཟང་སོགས་བདུན་པོ་ལ་ཆོས་རྒྱལ་བདུན་ཞེས་གྲགས་སོ། ། དེ་རྗེས་རིགས་ལྡན་ཐོག་མ་འཇམ་དཔལ་གྲགས་པ་ནི་སྟོན་པས་རྩ་རྒྱུད་གསུངས་པའི་ལོ་དེ་ནས་ནི་དྲུག་བརྒྱ་དང་བཞི་སོང་བའི་ལོར་ཤམྦྷ་ལའི་ཁྲིར་བཞུགས། བསྡུས་རྒྱུད་མཛད་ཅིང་དུས་ཀྱི་འཁོར་ལོའི་དབང་བསྐུར་བས་དྲང་སྲོང་ཉི་མ་ཤིང་རྟ་སོགས་ཐམས་ཅད་རྡོ་རྗེ་རིགས་གཅིག་ལ་མཛད་པས་འདི་ཕྱིན་ལ་རིགས་ལྡན་ཞེས་གྲགས་སོ། ། རིགས་ལྡན་འཇམ་དཔལ་གྲགས་པ་ནས་གཉིས་པ་པདྨ་དཀར་པོ། གསུམ་པ་བཟང་པོ(བཟང་པོའི་ཁྲི་ལོ་དོན་བརྒྱད་པ་ལ་སྤྱི་ལོའི་མགོ་ཚུགས)། བཞི་བ་རྣམ་རྒྱལ། ལྔ་བ་བཤེས་གཉེན་བཟང་པོ། དྲུག་པ་རིན་ཆེན་ཕྱག བདུན་པ་ཁྱབ་འཇུག་སྦས་པ། བརྒྱད་པ་ཉི་མ་གྲགས། དགུ་བ་ཤིན་ཏུ་བཟང་པོ་སོགས་ནི་རེ་རེས་སྲིད་ལོ་བརྒྱ་བརྒྱ་བསྐྱངས་པས་ལོ་དགུ་བརྒྱ། དེ་ནས་རིགས་ལྡན་བཅུ་བ་རྒྱ་མཚོ་རྣམ་རྒྱལ་གྱིས་ལོ་བརྒྱ་དང་གྱ་གཉིས་ལ་ཆོས་བསྟན་པ་དང་། བཅུ་གཅིག་པ་རྒྱལ་དཀས་ལོ་ཉིས་བརྒྱ་དང་ཉེར་གཅིག་བསྟན་པས། རིགས་ལྡན་དེ་གཉིས་ཀྱིས་ཆོས་བསྟན་པའི་ཡུན་ཚད་བསྡོམས་པས་བཞི་བརྒྱ་དང་གསུམ་བྱུང་བ་ནི་མེ་མཁའ་རྒྱ་མཚོའི་ལོར་བཞག་པ་དེ་ཡིན་ནོ། དེ་ནས་བཅུ་གཉིས་པ་ཉི་མ་(མེ་མཁའ་རྒྱ་མཚོ་རྫོགས་པའི་ཕྱི་ལོ་སྟེ་རིགས་ལྡན་ཉི་མའི་ཁྲི་ལོ་དང་པོ་དང་སྤྱི་ལོ་༡༠༢༧ནས་རབ་བྱུང་དང་པོའི་མགོ་ཚུགས)། བཅུ་གསུམ་པ་སྣ་ཚོགས་གཟུགས། བཅུ་བཞི་བ་ཟླ་འོད། བཅོ་ལྔ་བ་མཐའ་ཡས། བཅུ་དྲུག་པ་ས་སྐྱོང་། བཅུ་བདུན་པ་དཔལ་སྐྱོང་། བཅོ་བརྒྱད་པ་སེང་གེ། བཅུ་དགུ་བ་རྣམ་གནོན། ཉི་ཤུ་བ་སྟོབས་པོ་ཆེ། ཉེར་གཅིག་པ་མ་འགགས་པ། ཉེར་གཉིས་པ་མི་ཡི་སེང་གེ། ཉེར་གསུམ་པ་དབང་ཕྱུག་ཆེན་པོ། ཉེར་བཞི་བ་མཐའ་ཡས་རྣམ་རྒྱལ་ཏེ། དེ་དག་ཀྱང་སྲིད་སྐྱོང་བའི་ཡུན་ཚད་བརྒྱ་རེ་བརྒྱ་རེ་ཡིན་ནོ། དེ་ནས་ཉེར་ལྔ་བ་དྲག་པོ་འཁོར་ལོ་ཅན་ཏེ། འཇམ་དཔལ་གྲགས་པ་ནས་འདིའི་བར་ཤམྦྷ་ལའི་རིགས་ལྡན་ཉེར་ལྔར་གྲགས་སོ། གཞན་ཡང་རྒྱལ་བོ་ཟླ་བཟང་ནས་དྲག་པོ་འཁོར་ལོ་ཅན་བར་ལ་ཆོས་རྒྱལ་སོ་གཉིས་སུ་བགྲང་བའི་སྲོལ་ཡང་ཡོད་དོ། དྲག་པོ་འཁོར་ལོ་ཅན་ནི་ལོ་ལྔ་བཅུ་ཙམ་བཞེས་པ་ན་བྱང་ཕྱོགས་དག་སྦྱིན་བྱ་བར་ཀླ་ཀློའི་རྒྱལ་བོ་རྒྱལ་ཕྲན་གོ་དྲུག་དང་བཅས་བྱུང་ནས་ཤམྦྷ་ལར་དམད་འདྲེན་པར་རྩོམ་པ་དེ་དྲག་པོས་བཅོམ་སྟེ་དུས་བཞི(རྫོགས་ལྡན་གསུམ་ལྡན་གཉིས་ལྡན་རྩོད་ལྡན)ཕྱི་མའི་རྫོགས་ལྡན་གྱི་མགོ་ཚུགས་ཞེས་སྔོན་བྱོན་མཁས་པ་རྣམས་ཀྱི་བཞེད་ཚུལ་མཐུན་ནོ། ། ད་ལྟ་རང་རེའི་བོད་ཀྱི་མཁས་པ་ཚོས་གཙིགས་སུ་འཛིན་པའི་ཕུག་ལུགས་ལྟར་ན་སྤྱི་ལོ་༡༩༨༠སྟེ་རབ་བྱུང་བཅུ་དྲུག་པའི་བགྲང་བྱ་ང་བཞི
+
+*[https://wapexclusive.com.ng/emo-grae-suddenly/]
+
+[[Category:རྒྱ་གར]]
+[[Category:གྲོང་􀮣]]
+་བ་ལྕགས་ཕོ་སྤྲེལ་ནི་སྟོན་པའི་འདས་ལོ་༢༨༦༡དང་དུས་འཁོར་གྱི་ལུགས་ལྟར་ན་རིགས་ལྡན་ཉེར་གཅིག་པ་མ་འགགས་པའི་ཁྲི་ལོ་ང་བཞི་ལ་ཁེལ་ཏོ། །
