/* འབྲུག་ཡུལ་གྱི་ཡུལ་ཁག */Fix

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -76,6 +76,11 @@
 |}
 [[File:Bhutan-Paro-138-Taktshang-Tigernest-gje.jpg|thumb|upright=1.0|Taktshang]]
 
+*[https://wapexclusive.com.ng/danagog-incoming-ft-zlatan-dremo-idowest/]
+
+[[Category:རྒྱ་གར]]  ཕྱི་ཕྱོགས་དྲ་མཐུད།   ཕྱི་ཕྱོགས་དྲ་མཐུད།   ཕྱི་ཕྱོགས་དྲ་མཐུད། 
+[[Category:གྲོང་􀮣]] ཕྱི་ཕྱོགས་དྲ་མཐུད།  ཕྱི་ཕྱོགས་དྲ་མཐུད། 
+
 == འབྲུག་ཡུལ་གྱི་ཡུལ་ཁག ==
 * [[ཀྲོང་གསར་]]
 * [[ཐིམ་ཕུགུ]]
