--- a/སྐྱིད་ཆུ་ལྷ་ཁང་.mw
+++ b/སྐྱིད་ཆུ་ལྷ་ཁང་.mw
@@ -1,10 +1,9 @@
 སྤ་རོ་སྐྱེར་ཆུ་ལྷ་ཁང་གི་ཆགས་རབས།
 
 སྤ་རོ་སྐྱིད་ཆུ་ལྷ་ཁང་འདི་ རྒྱལ་ཁབ་ནང་ ནང་པའི་གཙུག་ལག་ཁང་ཚུ་གི་གྲས་ལས་ རྙིང་ཤོས་ཅིག་ཨིནམ་མ་ཚད་ བྱིན་རླབས་ཅན་ཅིག་སྦེ་ ཆ་བཞག་མི་དེ་ཡང་། དུས་རབས་༧ པའམ་ སྤྱི་ལོ་༦༥༩ ལུ་ ཆོས་རྒྱལ་སྲོང་བཙན་སྒམ་པོ་གིས་ རྫུ་འཕྲུལ་ཐོག་ལས་ ཉིནམ་གཅིག་ལུ་ གཙུག་ལག་ཁང་བརྒྱ་དང་རྩ་བརྒྱད་ རྨང་གཞི་བཙུགས་ཏེ་བཞེངས་ནི་འགོ་བཙུགས་མི་ མཐའ་འདུལ་གྱི་ གཙུག་ལག་ཁང་ཚུ་གི་གྲས་ལས་ གཅིག་ཨིན་པས། གཙུག་ལག་ཁང་བརྒྱ་དང་རྩ་བརྒྱད་ཀྱི་གྲས་ལས་ འབྲུག་ལུ་༢ ཡོདཔ་ད་ དེ་ཡང་ སྤ་རོ་སྐྱིད་ཆུ་ལྷ་ཁང་དང་ བུམ་ཐང་བྱམས་པ་ལྷ་ཁང་ཨིན་པས། ལྷ་ཁང་གཞན་༡༠༦ བོད་ལུ་ བཞེངས་ཡོད་པའི་ ལོ་རྒྱུས་འདུག གཙུག་ལག་ཁང་ཚུ་ སྤྲུལ་པའི་བཟོ་བོ་༥༠༠ གིས་ བཞེངས་ཡོདཔ་ཨིན་པས། མཐའ་འདུལ་གྱི་གཙུག་ལག་ཁང་དེ་ དེ་བསྒང་བོད་དང་འབྲུག་རྒྱལ་ཁབ་ལུ་ གནོདཔ་བཀལ་མི་འདྲེ་སྲིན་ཚུ་ བཏུལ་ནིའི་དོན་ལུ་ བཞེངས་ཡོད་པའི་ ལོ་རྒྱུས་འདུག་ཟེར་ཨིནམ་ད་ དེ་ཡང་ བདུདམོའི་དོན་ཧིང་དེ་ བོད་ལྷ་ས་ལུ་ གནས་ནི་དེ་གིས་ ལྷ་ས་གཙུག་ལག་ཁང་བཞེངས་ནུག་ཟེར་ཨིན་པས། དེ་ལས་ བདུདམོ་གི་སྤུས་མོ་དེ་ བུམ་ཐང་ལུ་ཕོགཔ་ལས་ བྱམས་པ་ལྷ་ཁང་དང་ རྟིངམ་དེ་ སྤ་རོ་ལུ་ཕོགཔ་ལས་ སྐྱིད་ཆུ་བཞེངས་ནུག་ཟེར་ཨིནམ་ད་ མཐའ་འདུལ་གྱི་ གཙུག་ལག་ཁང་ཚུ་གི་ ནང་རྟེན་ཚུ་ཡང་ ཇོ་བོ་གི་ སྐུ་འདྲ་བཞེངས་གནང་ནུག། སྐྱིད་ཆུ་ལྷ་ཁང་གི་ ནང་རྟེན་གཙོ་ཅན་ ཇོ་བོ་ཤཱཀྱ་མུ་ནེ་གི་ སྐུ་འདྲ་དེ་ཡང་ དེ་བསྒང་ གཙུག་ལག་ཁང་བཞེངས་པའི་སྐབས་ལུ་ བཞེངས་ཡོདཔ་ད་ བུམ་ཐང་བྱམས་པ་ལྷ་ཁང་གི་ནང་རྟེན་ རྒྱལ་ཚབ་བྱམས་པ་མགོན་པོ་ཡང་ གཙུག་ལག་ཁང་ གདན་ས་བཏབ་པའི་སྐབས་ལས་ར་ བཞེངས་ཡོད་པའི་ལོ་རྒྱུས་འདུག། སྐྱིད་ཆུ་ལྷ་ཁང་ནང་ གཏེར་མ་འདྲཝ་ ལེ་ཤ་ཡོད་པའི་སྐོར་ལས་ གུ་རུ་རིན་པོ་ཆེ་གིས་ བཀའ་ཐང་བསྡུས་པའི་ནང་ གསུངས་མི་དང་འཁྲིལཝ་ད་ ལྷོ་ཡི་སྐྱེར་ཆུ་ལྷ་ཁང་ནང་༔ ཆོས་དང་ནོར་གྱི་གཏེར་ཞིག་སྦས༔ སྐྱེར་ཆུ་ལྷ་ཁང་གི་གཙོ་བོའི་ཐུགས་ཀན༔ རིན་པོ་ཆེའི་པ་ཏྲ་འཁྱིལ་བ་ཅིག་ཡོད༔ དེའི་འོག་སོར་བཞི་བྲུས་པར་ཟངས་སྦུ་ཅིག་ནཿ རྒྱུད་སྡེ་སྣོད་ཀྱི་འབུམ་ཞེས་བྱ་བ་དང་༔ སྡེ་སྣོད་ཀུན་འབྱུང་ཞེས་པ་གཉིས༔ ཤོག་བུ་དྲིལ་བ་ལ་བྲིས་ན་ཡོད་དོ༔གསུངས་ཡོདཔ་ཨིན་པས། སྐྱིད་ཆུ་ལྷ་ཁང་གི་ མིང་ངོ་མ་སྐྱེར་ཆུ་ལྷ་ཁང་ཨིནམ་བཞིན་དུ་ སྤ་གྲོ་ཟེར་མི་དེ་ཡང་ སྒྲ་ཉམས་ཏེ་སྤ་རོ་ཟེར་དར་ཁྱབ་སོང་ཡོདཔ་བཟུམ་ཅིག་ཨིན་པས་ཟེར་ཞུ་ནི་ཨིན་ནོ།།
-== ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
-* [http://wapexclusive.com.ng/]
 
-[[Category:རྒྱ་གར]]
-[[Category:གྲོང་􀮣]]
 
-<br />
+
+[[Category:ནང་པ]]
+[[Category:སྤ་རོ་རྫོང་ཁག]]
+[[Category:ལྷ་ཁང]]
