Undo revision 28560 by [[Special:Contributions/Estcot|Estcot]] ([[User talk:Estcot|talk]]) -

--- a/མི་ཎི་ཡིག་དྲུག་.mw
+++ b/མི་ཎི་ཡིག་དྲུག་.mw
@@ -2,10 +2,4 @@
 
 སྒོམ་སྡེ་ལྷ་རམས་པས་མཛད།
 
-ཨོཾ་མ་ཎི་པདྨེ་ཧཱུྃ།(ལེགས་སྦྱར) ॐ मणि पद्मे हूँཨོཾ་ལ་ཨ་ཨུ་མ་གསུམ་འདུས་པས།རྡོ་རྗེ་གསུམ་མམ་སངས་རྒྱས་ཀྱི་སྐུ་གསུང་ཐུགས་གསུམ་མཚོན།(སྤྱིར་བཏང་ཨོཾ་ནི་པྲ་ཎ་མ་ཞེས་པ་རབ་བསྔགས་ཏེ་འདུད་པ་དང་ཕྱག་འཚལ་བའི་མཚོན་བྱེད་དང༌།གཞན་ཡང་བཀྲ་ཤིས་པ་དང་གཡང་གི་དོན་ནོ།།ཞིབ་པར་ཨོཾ་ཞེས་པའི་ཐད་དུ་གཟིགས)མ་ཎི་ནོར་བུ།པདྨ་ནི་མེ་ཏོག་པདྨ།མེ་ཞེས་པའི་རིང་ཆ་ནི་བྱིས་པས་མ་ལ་འབོད་པའི་ཚེ་གདངས་རིང་པོས་འབོད་པ་ལྟར།ཨེ་ཞེས་པ་རྣམ་དབྱེ་བརྒྱད་པ་འབོད་པའི་སྒྲ་ཡིན་པར་བཤད།ཧཱུྃ་ནི་བསྐུལ་བ་དང་འབོད་པའི་དོན་ཡིན་པར་གཞུང་མང་པོར་གསུངས་(གཞུང་འགའ་ཞིག་ཏུ་ཐུགས་ཀྱི་ས་བོན་ཡིན་པར་ཡང་གསུངས)པས།‑­ཀྱཻ་ནོར་བུ་པདྨ་ཅན་(ཞེས་ནོར་བུ་ཆུ་ཤེལ་གྱི་ཕྲེང་བ་དང་གསེར་གྱི་པདྨ་ཕྱག་མཚན་དུ་བསྣམས་པའི)ལྷའི་མཚན་ནས་བོས་ཏེ་བདག་ལ་སྐུ་གསུང་ཐུགས་ཀྱི་དངོས་གྲུབ་སྩོལ་ཅིག་ཅེས་ཐུགས་རྒྱུད་བསྐུལ་བའོ།།མ་ཎིའི་མཇུག་ཏུ་ཧྲཱིཿསྦྱོར་མི་དགོས་ཤིང༌།སྦྱར་ན་ཡི་གེ་བདུན་དུ་འགྲོ་ཞིང་འདི་ལ་རྒྱུད་སྡེ་རྣམས་སུ་གཟུངས་ཡི་གེ་དྲུག་པ་ཞེས་ཐ་སྙད་བྱེད་དེ།ཡི་གེ་དྲུག་གིས་སྦྱང་གཞི་འགྲོ་བ་རིགས་དྲུགསྦྱང་བྱ་དྲི་མ་དྲུག སྦྱོང་བྱེད་ལམ་ཕར་ཕྱིན་དྲུག སྦྱངས་འབྲས་རྒྱལ་བ་རིགས་ལྔ་དང་རྡོ་རྗེ་འཆང་སྟེ་རིགས་དྲུག་མཚོན།ཞིབ་ཏུ་བཤད་ན།(སྦྱང་གཞི་སེམས་ཅན)ཨོཾ་གྱིས་ལྷ་སྐྱེ་འཆིའི་(འཆི་ལྟས་སྐྱེས་ལྟས་ཀྱི)སྡུག་བསྔལ་སེལ།མ་ཡིས་ལྷ་མ་ཡིན་འཐབ་རྩོད་ཀྱི་སྡུག་བསྔལ་ཞི།ཎི་ཡིས་མི་སྐྱེ་རྒ་ན་འཆིའི་སྡུག་བསྔལ་སེལ།པད་ཀྱིས་དུད་འགྲོ་བཀོལ་སྤྱོད་ཀྱི་སྡུག་བསྔལ་སེལ།མེ་ཡིས་ཡི་དྭགས་བཀྲེས་སྐོམ་གྱི་སྡུག་བསྔལ་སེལ།ཧཱུྃ་གིས་དམྱལ་བ་ཚ་གྲང་གི་སྡུག་བསྔལ་སེལ་ལོ།(སྦྱང་བྱ་དྲི་མ)ཨོཾ་གྱིས་(ལྷའི)ང་རྒྱལ།མ་ཡིས་(ལྷ་མ་ཡིན་གྱི)ཕྲག་དོགཎི་ཡིས་(མིའི)འདོད་ཆགས།པད་ཀྱིས་(དུད་འགྲོའི)གཏི་མུགམེ་ཡིས་(ཡི་དྭགས་ཀྱི)བརྣབ་སེམས།ཧཱུྃ་གིས་(དམྱལ་བའི)གནོད་སེམས་སམ་ཞེ་སྡང་མཚོན།(སྦྱོང་བྱེད་ལམ)ཨོཾ་གྱིས་སྦྱིན་པའི་ཕར་ཕྱིན།མ་ཡིས་ཚུལ་ཁྲིམས་ཀྱི་ཕར་ཕྱིན།ཎི་ཡིས་བཟོད་པའི་ཕར་ཕྱིན།པད་ཀྱི་བརྩོན་འགྲུས་ཀྱི་ཕར་ཕྱིན།མེ་ཡིས་བསམ་གཏན་གྱིས་ཕར་ཕྱིན།ཧཱུྃ་གིས་ཤེས་རབ་ཕར་ཕྱིན་བཅས་མཚོན།(སྦྱང་འབྲས) (མ་ཎིའི་ཡིག་འབྲུ་རྣམས་དཀར་སེར་དམར་ལྗང་སྔོ་བའི་ཁ་དོག་སྣ་ཚོགས་སུ་བྱས་པ་འདི་མཛེས་ཆོས་ལྟ་བུ་མིན་པར་དེས་རྒྱལ་བ་རིགས་དྲུག་མཚོན་པའི་མཚོན་དོན་ཁྱད་པར་ཅན་ཡོད་པར་ཤེས་དགོས་ཏེ)ཨོཾ་དཀར་པོས་རྣམ་སྣང་དཀར་པོ།མ་ལྗང་ཁུས་དོན་གྲུབ་ལྗང་ཁུ།ཎི་སེར་པོས་རིན་འབྱུང་སེར་པོ།པད་སྔོན་པས་(འོག་གི་ཧཱུྃ་སྔོན་པོ་དང་ཁྱད་པར་འབྱེད་པའི་ཕྱིར་བྲིས་ཆ་རྣམས་སུ་འདི་ཅུང་ཟད་དཀར་ཤས་ཆེ་བའི་སྔོན་པོར་འབྲི་སྲོལ་ཡོད)མི་བསྐྱོད་པ་སྔོན་པོ།མེ་དམར་པོས་འོད་དཔག་མེད་དམར་པོ།ཧཱུྃ་སྔོན་པོས་(ནག་ཤས་ཆེ་བའི་སྔོན་པོ)རྡོ་རྗེ་འཆང་སྔོན་པོ་མཚོན་པ་བཅས་སོ།།བསྒོམ་བཟླས་བྱ་ཚུལ་ནི།བླ་མ་དང་སྤྱན་རས་གཟིགས་དབྱེར་མེད་དུ་སྒོམ་པའི་ཐུགས་ཀར་ཟླ་བའི་སྟེང་དུ་ཧྲཱིཿཡིག་དཀར་པོའི་(ཧྲཱིཿདཀར་པོས་སྤྱན་རས་གཟིགས་ཀྱི་ཐུགས་མཚོན།དེ་ཡང༌།ཧྲཱིཿhriནི།ཐུགས་མཚོན་པའི་ཡི་གེ་ཞིག་སྟེ།ལེགས་སྦྱར་གྱི་ཧྲི་ད་ཡའི་བསྡུས་ཚིག་སྟེ།སྙིང་དང༌།སྙིང་པོ།སྙིང་གཐུགས་བཅས་ལ་འཇུགཀློག་ཚུལ་ནི་ཧི་རི་ཞེས་པ་ལྟ་བུར་བཀླག)མཐར་ཡིག་དྲུག་གིས་བསྐོར་བ་ལ་དམིགས་ཏེ་བསྒོམ་བཟླས་བྱ་དགོས།ཡང་།མ་ཎི་ཐབས་དང་།པདྨ་ཤེས་རབ།ཧཱུྃ་ཟུང་དུ་འཇུག་པ་སྟེ་ཐབས་ཤེས་ཟུང་འཇུག་ལ་སྦྱར་ནས་འགྲེལ་བཤད་བྱེད་ཚུལ་སོགས་མི་འདྲ་བ་གཞན‑­་ཡང་ཡོད་པས་འདི་ཁོ་ནར་མ་ངེས་སོ། ཨོཾ་གྱི་འགྲེལ་བཤད་ཞིབ་པར་ཨོཾ་ཞེས་པའི་ཐད་དུ་གཟིགས།༼ཨོཾ༽(ལེགས་སྦྱར) ❶ལེགས་སྦྱར་གྱི་ཨོཾ་ནི་གུས་འདུད་དང་ཕྱག་འཚལ་བ་མཚོན་བྱེད་ཀྱི་ཡི་གེ་ཞིག་སྟེ།ལེགས་སྦྱར་གྱི་प्रणमः“པྲ་ཎ་མཿ”ཞེས་པ་རབ་སྔགས་ཏེ་ཕྱག་འཚལ་བ་དང་ཨོཾ་ཡིག་གི་དོན་ཡིན་པར།སཾ་བོད་སྐད་གཉིས་ཤན་སྦྱར་གསེར་གྱི་ཕྲེང་མཛེས་ལས་གསུངས་པ་ལྟར་དང་།བོད་པས་བཀྲ་ཤིས་བདེ་ལེགས་ཟེར་བའི་ཚོད་དུ་རྒྱ་གར་བ་རྣམས་འཚམས་འདྲི་བྱེད་ཚེ་པྲ་ཎམ་ཞེས་བརྗོད་པ་གུས་འདུད་དང་ཕྱག་འཚལ་བ་མཚོན་བྱེད་རེད།ཡང་།སྣར་ཐང་ལོ་ཙཱའི་སྔགས་ཀྱི་བཀླག་ཐབས་སུ།ཨོཾ་ནི་བཀྲ་ཤིས་པ་དང་གཡང་གི་དོན་དུ་བཤད་ཡོད།དཔལ་དུས་ཀྱི་འཁོར་ལོའི་ས་གར་དང་མཆོད་གར་གྱི་སྔགས་དོན་བརྡ་བཀྲོལ་ཁུངས་ལྡན་བདུད་རྩིའི་ཟེགས་མ་ལས་ཀྱང་།ཨོཾ་ནི་སྔགས་ཀྱི་འགོ་འདྲེན་དང་བསྒྱུར་ན་རབ་སྔགས་སམ་སྲུངས་ཤིག་ཅེས་པའི་དོན་ཡིན་པར་བཤད།❷ཡང་།འདི་ལ་ནོར་བུ་འཛིན་པའི་སྔགས་ཞེས་ཀྱང་ཟེར།ཨོཾ་ལ་ཨ་ཨུ་མ་གསུམ་(འདི་ཅུང་ཟད་གོ་དཀའ་བའི་རྒྱུ་མཚན་ནི་བོད་ཡིག་ལ་ཨཱ་ལི་སྲོག་ཞུགས་ཀྱི་རྣམ་གཞག་མ་མཛད་པས།དེ་ནི་ལེགས་སྦྱར་གྱི་དབང་དུ་བྱས་པ་སྟེ།སི་ཏུ་འགྲེལ་ཆེན་གྱི་དབུར།ལེགས་སྦྱར་ལྟར་ཨ་ཨི་འདུས་པས་ཨེ་སོགས་སུ་འགྱུར་བར་ཁས་ལེན་དགོས་པའི་སྐྱོན་ཡང་ཡོད་པའི་ཕྱིར་རོ།།ཞེས་གསུངས་པསཤེས་པར་འགྱུར་ཏེ།དཔེར་ན་ཨ་དང་ཨུ་འདུས་པ་ལས།ཨོ་ཞེས་གྲུབ།ཨ་དང་ཨི་འདུས་པས། ཨེ་ཞེས་གྲུབ་པ་ལྟ་བུའོ)འདུས་པས། སྐུ་གསུང་ཐུགས་གསུམ་མཚོན།དེ་གསུམ་གཅིག་ཏུ་གྱུར་པའི་ཨོཾ་གྱིས་རྡོ་རྗེ་གསུམ་དབྱེར་མེད་མི་ཕྱེད་པ་མཚོན།སྔགས་དེའི་མཚོན་དོན་དྲན་པའི་སྒོ་ནས་ངག་ཏུ་བརྗོད་ན་བསོད་ནམས་མང་དུ་སྡུད་པས་ནོར་བུ་འཛིན་པའི་སྔགས་ཞེས་བརྗོད་དེ།རྒྱུད་རྡོ་རྗེ་རྩེ་མོ་ལས།ཨོཾ་ནི་ཅི་ཞིག་ཡིན་པར་བརྗོད།།མཆོག་དང་ནོར་དང་དཔལ་དང་གཡང་།།སྐལ་བཟང་རྣམ་པ་དང་ལྡན་ཞིང་།།དམ་བཅའ་བ་དང་བཀྲ་ཤིས་དོན།།ནོར་བུ་འཛིན་པའི་སྔགས་སུ་བརྗོད།།ཅེས་གསུངས་པ་ལྟར་རོ།།ཡི་གེ་གསུམ་པོ་རྡོ་རྗེ་གསུམ་དུ་འཇོག་ཚུལ་སྐལ་ལྡན་གྲགས་པས་ཨ་མི་བསྐྱོད་པ།ཨུ་སྣང་མཐའ།མ་རྣམ་སྣང་དུ་བཞེད།ལོ་ཙཱ་བ་འགའ་ཞིག་གིས།ཨ་དྷེ་ཧ་ཙ་ལུས།ཨ་ཙ་ར་ངགཨཾ་མན་ཙ་ཡིད་དུ་འདོད་ཅེས་རྗེ་བདག་ཉིད་ཆེན་པོས་གསུངས་སོ།།ཞེས་དཔལ་དུས་ཀྱི་འཁོར་ལོའི་ས་གར་དང་མཆོད་གར་གྱི་སྔགས་དོན་བརྡ་བཀྲོལ་ཁུངས་ལྡན་བདུད་རྩིའི་ཟེགས་མ་ལས་གསུངས་སོ།❸ཡང་།བཀྲ་ཤིས་པ་དང་གཡང་གི་དོན་ཡིན་པར་སྣང་ཐང་ལོ་ཙཱ་བ་གསུང་།འདི་འདོན་པ་རྣམས་ལ་བཀྲ་ཤིས་པ་སྟེ་བར་ཆད་མི་འབྱུང་ཞིང་།མངོན་པར་འདོད་པའི་དོན་འགྲུབ་
-
-*[https://wapexclusive.com.ng/emo-grae-suddenly/]
-
-[[Category:རྒྱ་གར]]
-[[Category:གྲོང་􀮣]]
-པར།མཚོ་ཊཱིཀ་ན་གསལ།‑­ཡི་གེ་འདི་དང་ཨ་ཐ་ཞེས་པ་གཉིས་སྔོན་ལྷ་ཚངས་པའི་ཁུར་ཚོས་བརྡོལ་ཏེ་བྱུང་ཚུལ་ཡང་དེའི་ཐད་དུ་གསལ།
+ཨོཾ་མ་ཎི་པདྨེ་ཧཱུྃ།(ལེགས་སྦྱར) ॐ मणि पद्मे हूँཨོཾ་ལ་ཨ་ཨུ་མ་གསུམ་འདུས་པས།རྡོ་རྗེ་གསུམ་མམ་སངས་རྒྱས་ཀྱི་སྐུ་གསུང་ཐུགས་གསུམ་མཚོན།(སྤྱིར་བཏང་ཨོཾ་ནི་པྲ་ཎ་མ་ཞེས་པ་རབ་བསྔགས་ཏེ་འདུད་པ་དང་ཕྱག་འཚལ་བའི་མཚོན་བྱེད་དང༌།གཞན་ཡང་བཀྲ་ཤིས་པ་དང་གཡང་གི་དོན་ནོ།།ཞིབ་པར་ཨོཾ་ཞེས་པའི་ཐད་དུ་གཟིགས)མ་ཎི་ནོར་བུ།པདྨ་ནི་མེ་ཏོག་པདྨ།མེ་ཞེས་པའི་རིང་ཆ་ནི་བྱིས་པས་མ་ལ་འབོད་པའི་ཚེ་གདངས་རིང་པོས་འབོད་པ་ལྟར།ཨེ་ཞེས་པ་རྣམ་དབྱེ་བརྒྱད་པ་འབོད་པའི་སྒྲ་ཡིན་པར་བཤད།ཧཱུྃ་ནི་བསྐུལ་བ་དང་འབོད་པའི་དོན་ཡིན་པར་གཞུང་མང་པོར་གསུངས་(གཞུང་འགའ་ཞིག་ཏུ་ཐུགས་ཀྱི་ས་བོན་ཡིན་པར་ཡང་གསུངས)པས།‑­ཀྱཻ་ནོར་བུ་པདྨ་ཅན་(ཞེས་ནོར་བུ་ཆུ་ཤེལ་གྱི་ཕྲེང་བ་དང་གསེར་གྱི་པདྨ་ཕྱག་མཚན་དུ་བསྣམས་པའི)ལྷའི་མཚན་ནས་བོས་ཏེ་བདག་ལ་སྐུ་གསུང་ཐུགས་ཀྱི་དངོས་གྲུབ་སྩོལ་ཅིག་ཅེས་ཐུགས་རྒྱུད་བསྐུལ་བའོ།།མ་ཎིའི་མཇུག་ཏུ་ཧྲཱིཿསྦྱོར་མི་དགོས་ཤིང༌།སྦྱར་ན་ཡི་གེ་བདུན་དུ་འགྲོ་ཞིང་འདི་ལ་རྒྱུད་སྡེ་རྣམས་སུ་གཟུངས་ཡི་གེ་དྲུག་པ་ཞེས་ཐ་སྙད་བྱེད་དེ།ཡི་གེ་དྲུག་གིས་སྦྱང་གཞི་འགྲོ་བ་རིགས་དྲུགསྦྱང་བྱ་དྲི་མ་དྲུག སྦྱོང་བྱེད་ལམ་ཕར་ཕྱིན་དྲུག སྦྱངས་འབྲས་རྒྱལ་བ་རིགས་ལྔ་དང་རྡོ་རྗེ་འཆང་སྟེ་རིགས་དྲུག་མཚོན།ཞིབ་ཏུ་བཤད་ན།(སྦྱང་གཞི་སེམས་ཅན)ཨོཾ་གྱིས་ལྷ་སྐྱེ་འཆིའི་(འཆི་ལྟས་སྐྱེས་ལྟས་ཀྱི)སྡུག་བསྔལ་སེལ།མ་ཡིས་ལྷ་མ་ཡིན་འཐབ་རྩོད་ཀྱི་སྡུག་བསྔལ་ཞི།ཎི་ཡིས་མི་སྐྱེ་རྒ་ན་འཆིའི་སྡུག་བསྔལ་སེལ།པད་ཀྱིས་དུད་འགྲོ་བཀོལ་སྤྱོད་ཀྱི་སྡུག་བསྔལ་སེལ།མེ་ཡིས་ཡི་དྭགས་བཀྲེས་སྐོམ་གྱི་སྡུག་བསྔལ་སེལ།ཧཱུྃ་གིས་དམྱལ་བ་ཚ་གྲང་གི་སྡུག་བསྔལ་སེལ་ལོ།(སྦྱང་བྱ་དྲི་མ)ཨོཾ་གྱིས་(ལྷའི)ང་རྒྱལ།མ་ཡིས་(ལྷ་མ་ཡིན་གྱི)ཕྲག་དོགཎི་ཡིས་(མིའི)འདོད་ཆགས།པད་ཀྱིས་(དུད་འགྲོའི)གཏི་མུགམེ་ཡིས་(ཡི་དྭགས་ཀྱི)བརྣབ་སེམས།ཧཱུྃ་གིས་(དམྱལ་བའི)གནོད་སེམས་སམ་ཞེ་སྡང་མཚོན།(སྦྱོང་བྱེད་ལམ)ཨོཾ་གྱིས་སྦྱིན་པའི་ཕར་ཕྱིན།མ་ཡིས་ཚུལ་ཁྲིམས་ཀྱི་ཕར་ཕྱིན།ཎི་ཡིས་བཟོད་པའི་ཕར་ཕྱིན།པད་ཀྱི་བརྩོན་འགྲུས་ཀྱི་ཕར་ཕྱིན།མེ་ཡིས་བསམ་གཏན་གྱིས་ཕར་ཕྱིན།ཧཱུྃ་གིས་ཤེས་རབ་ཕར་ཕྱིན་བཅས་མཚོན།(སྦྱང་འབྲས) (མ་ཎིའི་ཡིག་འབྲུ་རྣམས་དཀར་སེར་དམར་ལྗང་སྔོ་བའི་ཁ་དོག་སྣ་ཚོགས་སུ་བྱས་པ་འདི་མཛེས་ཆོས་ལྟ་བུ་མིན་པར་དེས་རྒྱལ་བ་རིགས་དྲུག་མཚོན་པའི་མཚོན་དོན་ཁྱད་པར་ཅན་ཡོད་པར་ཤེས་དགོས་ཏེ)ཨོཾ་དཀར་པོས་རྣམ་སྣང་དཀར་པོ།མ་ལྗང་ཁུས་དོན་གྲུབ་ལྗང་ཁུ།ཎི་སེར་པོས་རིན་འབྱུང་སེར་པོ།པད་སྔོན་པས་(འོག་གི་ཧཱུྃ་སྔོན་པོ་དང་ཁྱད་པར་འབྱེད་པའི་ཕྱིར་བྲིས་ཆ་རྣམས་སུ་འདི་ཅུང་ཟད་དཀར་ཤས་ཆེ་བའི་སྔོན་པོར་འབྲི་སྲོལ་ཡོད)མི་བསྐྱོད་པ་སྔོན་པོ།མེ་དམར་པོས་འོད་དཔག་མེད་དམར་པོ།ཧཱུྃ་སྔོན་པོས་(ནག་ཤས་ཆེ་བའི་སྔོན་པོ)རྡོ་རྗེ་འཆང་སྔོན་པོ་མཚོན་པ་བཅས་སོ།།བསྒོམ་བཟླས་བྱ་ཚུལ་ནི།བླ་མ་དང་སྤྱན་རས་གཟིགས་དབྱེར་མེད་དུ་སྒོམ་པའི་ཐུགས་ཀར་ཟླ་བའི་སྟེང་དུ་ཧྲཱིཿཡིག་དཀར་པོའི་(ཧྲཱིཿདཀར་པོས་སྤྱན་རས་གཟིགས་ཀྱི་ཐུགས་མཚོན།དེ་ཡང༌།ཧྲཱིཿhriནི།ཐུགས་མཚོན་པའི་ཡི་གེ་ཞིག་སྟེ།ལེགས་སྦྱར་གྱི་ཧྲི་ད་ཡའི་བསྡུས་ཚིག་སྟེ།སྙིང་དང༌།སྙིང་པོ།སྙིང་གཐུགས་བཅས་ལ་འཇུགཀློག་ཚུལ་ནི་ཧི་རི་ཞེས་པ་ལྟ་བུར་བཀླག)མཐར་ཡིག་དྲུག་གིས་བསྐོར་བ་ལ་དམིགས་ཏེ་བསྒོམ་བཟླས་བྱ་དགོས།ཡང་།མ་ཎི་ཐབས་དང་།པདྨ་ཤེས་རབ།ཧཱུྃ་ཟུང་དུ་འཇུག་པ་སྟེ་ཐབས་ཤེས་ཟུང་འཇུག་ལ་སྦྱར་ནས་འགྲེལ་བཤད་བྱེད་ཚུལ་སོགས་མི་འདྲ་བ་གཞན‑­་ཡང་ཡོད་པས་འདི་ཁོ་ནར་མ་ངེས་སོ། ཨོཾ་གྱི་འགྲེལ་བཤད་ཞིབ་པར་ཨོཾ་ཞེས་པའི་ཐད་དུ་གཟིགས།༼ཨོཾ༽(ལེགས་སྦྱར) ❶ལེགས་སྦྱར་གྱི་ཨོཾ་ནི་གུས་འདུད་དང་ཕྱག་འཚལ་བ་མཚོན་བྱེད་ཀྱི་ཡི་གེ་ཞིག་སྟེ།ལེགས་སྦྱར་གྱི་प्रणमः“པྲ་ཎ་མཿ”ཞེས་པ་རབ་སྔགས་ཏེ་ཕྱག་འཚལ་བ་དང་ཨོཾ་ཡིག་གི་དོན་ཡིན་པར།སཾ་བོད་སྐད་གཉིས་ཤན་སྦྱར་གསེར་གྱི་ཕྲེང་མཛེས་ལས་གསུངས་པ་ལྟར་དང་།བོད་པས་བཀྲ་ཤིས་བདེ་ལེགས་ཟེར་བའི་ཚོད་དུ་རྒྱ་གར་བ་རྣམས་འཚམས་འདྲི་བྱེད་ཚེ་པྲ་ཎམ་ཞེས་བརྗོད་པ་གུས་འདུད་དང་ཕྱག་འཚལ་བ་མཚོན་བྱེད་རེད།ཡང་།སྣར་ཐང་ལོ་ཙཱའི་སྔགས་ཀྱི་བཀླག་ཐབས་སུ།ཨོཾ་ནི་བཀྲ་ཤིས་པ་དང་གཡང་གི་དོན་དུ་བཤད་ཡོད།དཔལ་དུས་ཀྱི་འཁོར་ལོའི་ས་གར་དང་མཆོད་གར་གྱི་སྔགས་དོན་བརྡ་བཀྲོལ་ཁུངས་ལྡན་བདུད་རྩིའི་ཟེགས་མ་ལས་ཀྱང་།ཨོཾ་ནི་སྔགས་ཀྱི་འགོ་འདྲེན་དང་བསྒྱུར་ན་རབ་སྔགས་སམ་སྲུངས་ཤིག་ཅེས་པའི་དོན་ཡིན་པར་བཤད།❷ཡང་།འདི་ལ་ནོར་བུ་འཛིན་པའི་སྔགས་ཞེས་ཀྱང་ཟེར།ཨོཾ་ལ་ཨ་ཨུ་མ་གསུམ་(འདི་ཅུང་ཟད་གོ་དཀའ་བའི་རྒྱུ་མཚན་ནི་བོད་ཡིག་ལ་ཨཱ་ལི་སྲོག་ཞུགས་ཀྱི་རྣམ་གཞག་མ་མཛད་པས།དེ་ནི་ལེགས་སྦྱར་གྱི་དབང་དུ་བྱས་པ་སྟེ།སི་ཏུ་འགྲེལ་ཆེན་གྱི་དབུར།ལེགས་སྦྱར་ལྟར་ཨ་ཨི་འདུས་པས་ཨེ་སོགས་སུ་འགྱུར་བར་ཁས་ལེན་དགོས་པའི་སྐྱོན་ཡང་ཡོད་པའི་ཕྱིར་རོ།།ཞེས་གསུངས་པསཤེས་པར་འགྱུར་ཏེ།དཔེར་ན་ཨ་དང་ཨུ་འདུས་པ་ལས།ཨོ་ཞེས་གྲུབ།ཨ་དང་ཨི་འདུས་པས། ཨེ་ཞེས་གྲུབ་པ་ལྟ་བུའོ)འདུས་པས། སྐུ་གསུང་ཐུགས་གསུམ་མཚོན།དེ་གསུམ་གཅིག་ཏུ་གྱུར་པའི་ཨོཾ་གྱིས་རྡོ་རྗེ་གསུམ་དབྱེར་མེད་མི་ཕྱེད་པ་མཚོན།སྔགས་དེའི་མཚོན་དོན་དྲན་པའི་སྒོ་ནས་ངག་ཏུ་བརྗོད་ན་བསོད་ནམས་མང་དུ་སྡུད་པས་ནོར་བུ་འཛིན་པའི་སྔགས་ཞེས་བརྗོད་དེ།རྒྱུད་རྡོ་རྗེ་རྩེ་མོ་ལས།ཨོཾ་ནི་ཅི་ཞིག་ཡིན་པར་བརྗོད།།མཆོག་དང་ནོར་དང་དཔལ་དང་གཡང་།།སྐལ་བཟང་རྣམ་པ་དང་ལྡན་ཞིང་།།དམ་བཅའ་བ་དང་བཀྲ་ཤིས་དོན།།ནོར་བུ་འཛིན་པའི་སྔགས་སུ་བརྗོད།།ཅེས་གསུངས་པ་ལྟར་རོ།།ཡི་གེ་གསུམ་པོ་རྡོ་རྗེ་གསུམ་དུ་འཇོག་ཚུལ་སྐལ་ལྡན་གྲགས་པས་ཨ་མི་བསྐྱོད་པ།ཨུ་སྣང་མཐའ།མ་རྣམ་སྣང་དུ་བཞེད།ལོ་ཙཱ་བ་འགའ་ཞིག་གིས།ཨ་དྷེ་ཧ་ཙ་ལུས།ཨ་ཙ་ར་ངགཨཾ་མན་ཙ་ཡིད་དུ་འདོད་ཅེས་རྗེ་བདག་ཉིད་ཆེན་པོས་གསུངས་སོ།།ཞེས་དཔལ་དུས་ཀྱི་འཁོར་ལོའི་ས་གར་དང་མཆོད་གར་གྱི་སྔགས་དོན་བརྡ་བཀྲོལ་ཁུངས་ལྡན་བདུད་རྩིའི་ཟེགས་མ་ལས་གསུངས་སོ།❸ཡང་།བཀྲ་ཤིས་པ་དང་གཡང་གི་དོན་ཡིན་པར་སྣང་ཐང་ལོ་ཙཱ་བ་གསུང་།འདི་འདོན་པ་རྣམས་ལ་བཀྲ་ཤིས་པ་སྟེ་བར་ཆད་མི་འབྱུང་ཞིང་།མངོན་པར་འདོད་པའི་དོན་འགྲུབ་པར།མཚོ་ཊཱིཀ་ན་གསལ།‑­ཡི་གེ་འདི་དང་ཨ་ཐ་ཞེས་པ་གཉིས་སྔོན་ལྷ་ཚངས་པའི་ཁུར་ཚོས་བརྡོལ་ཏེ་བྱུང་ཚུལ་ཡང་དེའི་ཐད་དུ་གསལ།
