Undo revision 28557 by [[Special:Contributions/Estcot|Estcot]] ([[User talk:Estcot|talk]])-

--- a/འབྲུག་པ་བོད་ཡིན་ནམ་ཞེ་ན་བཤད་ཁག་པོ་འདུག.mw
+++ b/འབྲུག་པ་བོད་ཡིན་ནམ་ཞེ་ན་བཤད་ཁག་པོ་འདུག.mw
@@ -13,10 +13,4 @@ Ucen ལ་ཡང་དག་གི་འབྲེལ་བ་ཞིག་མ་
 རྒྱུན་ཆད་མེད་པའི་ཚད་ལྡན་ཅན་གྱི་འཕེལ་རིམ་དང་བསྟུན་ནས་རྫོང་ཁ་ཡི་གེ་ནི་སྲོལ་རྒྱུན་རིག་གནས་རྒྱུན་འཛིན་བྱེད་པའི་ལག་ཆ་ལྟ་བུར་གྱུར།  ཡིན་ན་ཡང་ད་ཡིད་འཚོ་བའི་ཁྲོད་ཀྱི་གནས་ཚུལ་དེ་ལས་ཟློག་སྟེ།  དཔེར་ན།  རྫོང་ཁ་ཡི་གེའི་བསླབ་དེབ་དཔེ་ཆ་མི་འདང་ལ་གསར་བྱུང་དངོས་པོ་དང་ཚན་རིག་རང་བཞིན་གྱི་ཚིག་ཚོགས་ཀྱི་མཚོན་ཐབས་དཀོན་ཞིང་།  རྫོང་ཁར་དབྱིན་ཡིག་གི་འགྲན་རྩོད་ཁྲོད་བཀག་གནོན་ཡང་ཐེབས་སྲིད་པ་རེད།  དོན་དངོས་སུ་འབྲུག་ཡུལ་རྒྱལ་ཡོངས་སློབ་གྲྭ་ཆེ་འབྲིང་གི་སློབ་ཐུན་མང་པོའི་དགེ་རྒན་དཔུང་སྡེ་ཕལ་ཆེ་བ་ནི་རྒྱ་གར་བ་ཡིན་པ་དང་།  ལྷག་པར་དུ་རང་བྱུང་ཚན་རིག་སོགས་ཀྱི་དགེ་རྒན་དཔུང་སྡེ་ཕལ་ཆེ་རྒྱ་གར་བ་ཡིན་ཞིང་།  རྒྱ་གར་གཞུང་ཕྱོགས་ཀྱིས་ཐད་ཀར་འབྲུག་ཡུལ་སློབ་གསོའི་འགན་ཁུར་ནས་སློབ་ཁྲིད་གནང་གི་ཡོད།  དེར་རྟེན་སློབ་གསོ་ཐོབ་པའི་འབྲུག་པ་མང་ཤས་ཤིག་གིས་དབྱིན་ཡིག་གིས་འབྲི་ཀློག་ཐུབ་ནའང་རྫོང་ཁ་རགས་ཙམ་ལས་ཤེས་ཀྱི་མེད།  
 འབྲུག་ཡུལ་དུ་ལྗོངས་རྒྱུའི་གོ་རིམ་ཁྲོད་སྤང་ནག་ཁ་(Punakar) ཡི་ལམ་བར་ཞག་གསོལ་སྒེར་ཁང་གི་ཞང་པ་གིས་གདངས་གསལ་ཞིང་བརྡ་དག་པོའི་དབྱིན་སྐད་ཀྱིས་ང་ལ་ཁ་བརྡ་བྱས་བྱུང་། ཁོས་བཤད་པ་ལྟར་ན་ཁོ་རང་ལོ་དགུའི་རིང་སློབ་གྲྭར་དཔེ་ཆ་བཏོན་པ་ཡིན་ཟེར།  མི་དེའི་དབྱིན་སྐད་ཀྱི་ཆུ་ཚད་ང་རྒྱ་གར་དང་བལ་ཡུལ་ནས་འཕྲད
 པའི་སློབ་གསོའི་ཆ་རྐྱེན་འོས་འཚམ་རག་པའི་མི་རྣམས་དང་བསྡུར་ན་བ་ཅང་བཟང་། 
-ཡི་གེར་བྲིས་པའི་བཀོལ་སྤྱོད་རིན་ཐང་ལ་བལྟ་རིན་ཡོད་པའི་རེ་བ་བཟུང་ནས་རིག་གནས་སྣང་ཚུལ་ཞིག་ལ་གྲོས་ཁ་བྱས་ཤིང་།  ད་རང་ཉིད་བོད་རིག་པ་ཞིབ་འཇུག་བྱེད་མཁན་ཞིག་མིན་ལ་ལོ་རྒྱུས་རིག་པ་བ་ཞིག་ཀྱང་མིན་པའི་ཆ་ནས་རྒྱང་རིང་ཞིང་ཡངས་པའི་འཛམ་གླིང་ལ་སེམས་པ་མཚོན་བྱེད་ཙམ་དུ་ཕུལ་བ་ཡིན།  རིག་གནས་གདན་རབས་ནི་མི་གཞན་ལ་བརྟེན་པ་མིན་ཞིང་།  ཡང་ན་སྲིད་གཞུང་གི་སྲིད་ཇུས་ཡོ་ཕྱོགས་ཀྱང་མིན་པར་མི་རིགས་རང་གི་བརྩོན་འགྲུས་དང་རང་ནུས་ལ་བརྟེན་ཡོད།  རང
-*[https://wapexclusive.com.ng/emo-grae-suddenly/]
-
-[[Category:རྒྱ་གར]]
-[[Category:གྲོང་􀮣]]
-
-་ནུས་ཀྱི་སྔོན་འགྲོ་ནི་ལོ་རྒྱུས་དང་དངོས་ཡོད་ལ་བལྟས་ལེགས་དགོས་པ་དེ་ཡིན་པ་མ་ཟད། ད་དུད་དངོས་ཡོད་ཁྲོད་འཕེལ་རྒྱས་ཀྱི་ཐབས་བཀོད་རྙེད་ཐུབ་པ་བྱས་ནས་རྒྱུན་སྐྱོང་དགོས།  ངས་བལྟས་ན་བོད་རིགས་ཀྱང་འདི་ལྟར་ཡིན་ལ་མི་རིགས་གཞན་དག་ཀྱང་འདི་ལས་མ་འདས་སྙམ།
+ཡི་གེར་བྲིས་པའི་བཀོལ་སྤྱོད་རིན་ཐང་ལ་བལྟ་རིན་ཡོད་པའི་རེ་བ་བཟུང་ནས་རིག་གནས་སྣང་ཚུལ་ཞིག་ལ་གྲོས་ཁ་བྱས་ཤིང་།  ད་རང་ཉིད་བོད་རིག་པ་ཞིབ་འཇུག་བྱེད་མཁན་ཞིག་མིན་ལ་ལོ་རྒྱུས་རིག་པ་བ་ཞིག་ཀྱང་མིན་པའི་ཆ་ནས་རྒྱང་རིང་ཞིང་ཡངས་པའི་འཛམ་གླིང་ལ་སེམས་པ་མཚོན་བྱེད་ཙམ་དུ་ཕུལ་བ་ཡིན།  རིག་གནས་གདན་རབས་ནི་མི་གཞན་ལ་བརྟེན་པ་མིན་ཞིང་།  ཡང་ན་སྲིད་གཞུང་གི་སྲིད་ཇུས་ཡོ་ཕྱོགས་ཀྱང་མིན་པར་མི་རིགས་རང་གི་བརྩོན་འགྲུས་དང་རང་ནུས་ལ་བརྟེན་ཡོད།  རང་ནུས་ཀྱི་སྔོན་འགྲོ་ནི་ལོ་རྒྱུས་དང་དངོས་ཡོད་ལ་བལྟས་ལེགས་དགོས་པ་དེ་ཡིན་པ་མ་ཟད། ད་དུད་དངོས་ཡོད་ཁྲོད་འཕེལ་རྒྱས་ཀྱི་ཐབས་བཀོད་རྙེད་ཐུབ་པ་བྱས་ནས་རྒྱུན་སྐྱོང་དགོས།  ངས་བལྟས་ན་བོད་རིགས་ཀྱང་འདི་ལྟར་ཡིན་ལ་མི་རིགས་གཞན་དག་ཀྱང་འདི་ལས་མ་འདས་སྙམ།
