--- a/སྒང་སྟེང་གསང་སྔགས་ཆོས་གླིང་.mw
+++ b/སྒང་སྟེང་གསང་སྔགས་ཆོས་གླིང་.mw
@@ -18,3 +18,8 @@
 
 གསང་སྔགས་རིག་པ་འཛིན་པ་སྒྲུབ་པའི་སྡེ། །ཁྲིམས་ལྡན་ངུར་སྨྲིག་འཆང་བ་ཆོས་ཀྱི་གླིང་། །
 པདྨའི་ཕྲིན་ལས་སྙིང་པོའི་བསྟན་པ་འདི། །སྲིད་མཐའི་བར་དུ་དར་ཞིང་རྒྱས་གྱུར་ཅིག །
+
+
+[[Category:ནང་པ]]
+[[Category:དགོན་པ]]
+[[Category:དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག]]
