[[Category:དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག]]

--- a/དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག.mw
+++ b/དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག.mw
@@ -33,7 +33,8 @@ Wangdue Phodrang-Yaks-08-Treiber-2015-gje.jpg|
 == ད་དུང་གཟིགས། ==
 == ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
 == འབྲེལ་མཐུད ==
+* [[སྒང་སྟེང་གསང་སྔགས་ཆོས་གླིང་]]
 *[http://www.wangduephodrang.gov.bt དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག]
 *[http://www.bhutan.gov.bt/government/dzongkhags.php?dz_id=38 འབྲུག་གི་འཛུལ་སྒོ་ དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག]
 
-[[Category:འབྲུག་གི་རྫོང་ཁག]]
+[[Category:དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག]]
