--- a/དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག.mw
+++ b/དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག.mw
@@ -37,4 +37,4 @@ Wangdue Phodrang-Yaks-08-Treiber-2015-gje.jpg|
 *[http://www.wangduephodrang.gov.bt དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག]
 *[http://www.bhutan.gov.bt/government/dzongkhags.php?dz_id=38 འབྲུག་གི་འཛུལ་སྒོ་ དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག]
 
-[[Category:དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག]]
+[[Category:དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག| ]]
