Reverted edits by [[Special:Contributions/Laycon queen|Laycon queen]] ([[User talk:Laycon queen|talk]]) to last revision by [[User:Impro|Impro]]

--- a/བོད་སྐད།.mw
+++ b/བོད་སྐད།.mw
@@ -64,7 +64,7 @@
 • སྦལ་ཏིའི་སྐད། སྦལ་ཏི་སི་ཐན་དང་རྒན་ཆེ་སོགས་པ་ཀི་ཐན་གྱི་བྱང་ཕྱོགས་ས་ཁུལ།
 
 == ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
-*Sándor Kőrösi Csoma 1834 [http://books.google.com/books?id=a78IAAAAQAAJ&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false ''Essay Towards a Dictionary, Tibetan and English''] Printed at the Baptist Mission Press [http://books.google.com /books?id=CrtLAAAAcAAJ&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false][http://books.google.com/books?id=HylHAAAAcAAJ&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false]
+*Sándor Kőrösi Csoma 1834 [http://books.google.com/books?id=a78IAAAAQAAJ&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false ''Essay Towards a Dictionary, Tibetan and English''] Printed at the Baptist Mission Press [http://books.google.com/books?id=CrtLAAAAcAAJ&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false][http://books.google.com/books?id=HylHAAAAcAAJ&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false]
 *Sandor Csoma de Körös 1834 [http://books.google.com/books?id=IrtLAAAAcAAJ&printsec=frontcover&source=gbs_ge_summary_r&cad=0 ''A grammar of the Tibetan language''] Baptist Mission Press [http://books.google.com/books?id=W0tNAAAAcAAJ&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false Volume 1][http://books.google.com/books?id=8ShHAAAAcAAJ&printsec=frontcover&source=gbs_ge_summary_r&cad=0]
 *H. A. Jäschke 1865 [http://books.google.com/books?id=h65FAAAAcAAJ&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false ''A Short Practical Grammar of the Tibetan Language, with Special Reference to the Spoken Dialects'']
 *H. A. Jäschke 1866 [http://books.google.com/books?id=p5VFAAAAcAAJ&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false ''Romanized Tibetan and English Dictionary''][http://books.google.com/books?id=kqACAAAAQAAJ&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false][http://books.google.com/books?id=b78IAAAAQAAJ&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false]
@@ -83,7 +83,7 @@
 
 *Herbert Bruce Hannah 1996 [http://books.google.com/books?id=E6uk2CT0BpsC&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false ''A Grammar of the Tibetan Language: Literary and Colloquial (with Copious Illustrations and Treating Fully of Spelling, Pronunciation and the Construction of the Verb and Including Appendices of the Various Forms of the Verb)''] Motilal Banarsidass Publ.
 *H. A. Jäschke 2003 [http://books.google.com/books?id=cFTVmipjOC0C&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false ''Tibetan-English Dictionary''] Courier Dover Publications
-*H. A. Jäschke 2004 [http://books.google.com/books?id=POgoZBYrbfEC&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false ''Tibetan-English Dictionary''] Routledge[https://wapexclusive.com.ng/ Dictionary]
+*H. A. Jäschke 2004 [http://books.google.com/books?id=POgoZBYrbfEC&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false ''Tibetan-English Dictionary''] Routledge
 
 
 {{translate}}
