--- a/རྒྱལ་པོའི་བརྟན་བཞུགས།.mw
+++ b/རྒྱལ་པོའི་བརྟན་བཞུགས།.mw
@@ -14,6 +14,6 @@
 
 འབྲུག་ཙན་དན་བཀོད་པའི་རྒྱལ་ཁབ་ནང་།། དཔལ་ལུགས་གཉིས་བསྟན་སྲིད་སྐྱོང་བའི་མགོན།། འབྲུག་རྒྱལ་པོ་མངའ་བདག་རིན་པོ་ཆེ།། སྐུ་འགྱུར་མེད་བརྟན་ཅིང་ཆབ་སྲིད་འཕེལ།། ཆོས་སངས་རྒྱས་བསྟན་པ་དར་ཤིང་རྒྱས།། འབངས་བདེ་སྐྱིད་ཉི་མ་ཤར་བར་ཤོག།
 
-ཟེར་མི་དེ་ཨིན། དེ་ལས་གདངས་བཟུམ་ཅི་འབད་བ་ཅིན་ ཐིམ་ཕུ་གཟིམ་དཔོན་ཇོའུ་ཅུ་མཆོག་གིས་ ཞིང་གཤེགས་པ་དམ་པ་འབྲུག་རྒྱལ་གསུམ་པ་མཆོག་ལུ་སྙན་འབུལ་ཞུ་སྟེ། ཁྲི་མཉམ་པ་མེད་པ་པདྨའི་ཁྲི། །ཟེར་བའི་གཞུང་སྒྲའི་གདངས་དབྱངས་ལུ་གཞི་བཞག་སྟེ་ དེ་བསྒང་རྒྱལ་སྲིད་བསྟན་འཛིན་རབ་རྒྱས་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་བཞི་པའི་གསེར་ཁྲི་མངའ་སྲོལ་ཞུས་སྐབས་ཀྱི་གདངས་དབྱངས་ཅིག་འབདཝ་ལས་ དེ་གུ་འགབ་པ་ཅིན་ རྟེན་འབྲེལ་ཡང་ལེགས་པས། ཡུན་དུ་ཡང་དེ་གིས་བརྟན་ནི་ཨིན་སྦེ། རྒྱལ་སྲས་བསྟན་འཛིན་རབ་རྒྱས་ཟེར་བའི་སྐྱེས་བུ་འདི་ ཨུ་རྒྱན་མཧཱ་གུ་རུ་སྐུ་དངོས་ཨིནམ་ལས་ ཁོ་ལུ་འཕུལ་ཡོད་པའི་གདངས་ལུ་འགབ་པ་ཅིན་ག་དེ་སྦེ་འཚམ་ག་ཟེར་བའི་སྙན་འབུལ་ཞུ་བའི་ཚེ། དེ་གནམ་མེད་ས་མེད་ལེགས་ཤོམ་ཨིན་མས་ཟེར་བཀའ་གྲོལ་ཏེ་ གདངས་འདི་་སྙན་ཆའི་ཐོག་ཏུ་འབད་བ་ཅིན་ དྲག་ཤོས་ཨ་ཁུ་བཀྲོངས་མི་མཆོག་གིས་བཟོ་གནང་སྟེ་ རྒྱལ་ཁབ་ཀྱི་རྒྱལ་པོའི་བརྟན་བཞུགས་ཅི་སྦེ་ཆ་འཇོག་བསྒྲུབས་ནུག ། ཅེས་པ་དེ་ཡང་གཞི་གཙོ་བོར་འབྲུག་པ་རྡོ་རྗེ་རྒྱལ་མཚན་མཆོག་གི་གསུང་བཤད་ལས་བཤུས་པ་ལགས་སོ།།
+ཟེར་མི་དེ་ཨིན། དེ་ལས་གདངས་བཟུམ་ཅི་འབད་བ་ཅིན་ ཐིམ་ཕུ་གཟིམ་དཔོན་ཇོའུ་ཅུ་མཆོག་གིས་ ཞིང་གཤེགས་པ་དམ་པ་འབྲུག་རྒྱལ་གསུམ་པ་མཆོག་ལུ་སྙན་འབུལ་ཞུ་སྟེ། ཁྲི་མཉམ་པ་མེད་པ་པདྨའི་ཁྲི། །ཟེར་བའི་གཞུང་སྒྲའི་གདངས་དབྱངས་ལུ་གཞི་བཞག་སྟེ་ དེ་བསྒང་རྒྱལ་སྲིད་བསྟན་འཛིན་རབ་རྒྱས་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་བཞི་པའི་གསེར་ཁྲི་མངའ་སྲོལ་ཞུས་སྐབས་ཀྱི་གདངས་དབྱངས་ཅིག་འབདཝ་ལས་ དེ་གུ་འགབ་པ་ཅིན་ རྟེན་འབྲེལ་ཡང་ལེགས་པས། ཡུན་དུ་ཡང་དེ་གིས་བརྟན་ནི་ཨིན་སྦེ། རྒྱལ་སྲས་བསྟན་འཛིན་རབ་རྒྱས་ཟེར་བའི་སྐྱེས་བུ་འདི་ ཨུ་རྒྱན་མཧཱ་གུ་རུ་སྐུ་དངོས་ཨིནམ་ལས་ ཁོ་ལུ་འཕུལ་ཡོད་པའི་གདངས་ལུ་འགབ་པ་ཅིན་ག་དེ་སྦེ་འཚམ་ག་ཟེར་བའི་སྙན་འབུལ་ཞུ་བའི་ཚེ། དེ་གནམ་མེད་ས་མེད་ལེགས་ཤོམ་ཨིན་མས་ཟེར་བཀའ་གྲོལ་ཏེ་ གདངས་འདི་་སྙན་ཆའི་ཐོག་ཏུ་འབད་བ་ཅིན་ དྲག་ཤོས་ཨ་ཁུ་བཀྲོངས་མི་མཆོག་གིས་བཟོ་གནང་སྟེ་ རྒྱལ་ཁབ་ཀྱི་རྒྱལ་པོའི་བརྟན་བཞུགས་ཅིག་སྦེ་ཆ་འཇོག་བསྒྲུབས་ནུག །ཅེས་པ་དེ་ཡང་གཞི་གཙོ་བོར་འབྲུག་པ་རྡོ་རྗེ་རྒྱལ་མཚན་མཆོག་གི་གསུང་བཤད་ལས་བཤུས་པ་ལགས་སོ།།
 
 བཀའ་དྲིན་ཆེ་ལགས།།
