*Empty MediaWiki Message*

--- a/བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག.mw
+++ b/བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག.mw
@@ -7,7 +7,8 @@
 
 == ཁོར་ཡུག ==
 == མགྲོན་ཁང་། ==
-== ལོ་རྒྱུས། བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་འདི་རྫོང་གཞི་ཚུ་གི་ནང་ལས་གསརཔ་གཅིག་ཨིན་རུང་ཆགས་ས་འདི་འབྲུག་གི་ཁྲོམ་རྙིང་ཤོས་ནང་ལུ་ཆགས་ཏེ་ཡོདཔ་ཨིན། རྒྱ་གར་ཨ་སམ་གྱི་དང་གཅིག་ཁར་ས་ཚམས་ཕོགཔ་ཨིནམ་དང་རྒྱ་མཚོ་ལས་མི་ཏར་མཐོ་ཚད་༢༠༠དང་༣༥༠༠ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་སྔོན་གདུང་བསམ་རྒྱ་དྲུང་གི་བཞུགས་གནས་ཡང་ཨིན། ==
+== '''ལོ་རྒྱུས།''' ==
+== བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་འདི་རྫོང་གཞི་ཚུ་གི་ནང་ལས་གསརཔ་གཅིག་ཨིན་རུང་ཆགས་ས་འདི་འབྲུག་གི་ཁྲོམ་རྙིང་ཤོས་ནང་ལུ་ཆགས་ཏེ་ཡོདཔ་ཨིན། རྒྱ་གར་ཨ་སམ་གྱི་དང་གཅིག་ཁར་ས་ཚམས་ཕོགཔ་ཨིནམ་དང་རྒྱ་མཚོ་ལས་མི་ཏར་མཐོ་ཚད་༢༠༠དང་༣༥༠༠ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་སྔོན་གདུང་བསམ་རྒྱ་དྲུང་གི་བཞུགས་གནས་ཡང་ཨིན། ==
 == ལྗོངས་རྒྱུ། ==
 == ཡུལ་ཚོ། ==
 ==མིང་ཐོགས་ཚུལ།==
